--- a/lang/ar.json
+++ b/lang/ar.json
@@ -267,7 +267,7 @@
     "colleague": "زميل",
     "Companies": "شركات",
     "Company name": "اسم الشركة",
-    "Compared to Monica:": "مقارنة بمونيكا:",
+    "Compared to Monica:": "مقارنة بـ Monica:",
     "Configure how we should notify you": "قم بتكوين الطريقة التي يجب أن نخطرك بها",
     "Confirm": "تأكيد",
     "Confirm Password": "تأكيد كلمة المرور",
@@ -307,7 +307,7 @@
     "Create a reminder": "إنشاء تذكير",
     "Create a slice of life": "اصنع شريحة من الحياة",
     "Create at least one page to display contact’s data.": "إنشاء صفحة واحدة على الأقل لعرض بيانات جهة الاتصال.",
-    "Create at least one template to use Monica.": "قم بإنشاء قالب واحد على الأقل لاستخدام مونيكا.",
+    "Create at least one template to use Monica.": "قم بإنشاء قالب واحد على الأقل لاستخدام Monica.",
     "Create a user": "إنشاء مستخدم",
     "Create a vault": "إنشاء قبو",
     "Created.": "تم الإنشاء.",
@@ -621,9 +621,9 @@
     "miles (mi)": "ميل (ميل)",
     "Modules in this page": "الوحدات في هذه الصفحة",
     "Monday": "الاثنين",
-    "Monica. All rights reserved. 2017 — :date.": "مونيكا. كل الحقوق محفوظة. 2017 — :date.",
+    "Monica. All rights reserved. 2017 — :date.": "Monica. كل الحقوق محفوظة. 2017 — :date.",
     "Monica is open source, made by hundreds of people from all around the world.": "Monica هو برنامج مفتوح المصدر، تم إنشاؤه بواسطة مئات الأشخاص من جميع أنحاء العالم.",
-    "Monica was made to help you document your life and your social interactions.": "تم إنشاء مونيكا لمساعدتك في توثيق حياتك وتفاعلاتك الاجتماعية.",
+    "Monica was made to help you document your life and your social interactions.": "تم إنشاء Monica لمساعدتك في توثيق حياتك وتفاعلاتك الاجتماعية.",
     "Month": "شهر",
     "month": "شهر",
     "Mood in the year": "المزاج في السنة",
@@ -640,7 +640,7 @@
     "Nature of the call": "طبيعة المكالمة",
     "nephew\/niece": "ابن أخ \/ ابنة",
     "New Password": "كلمة مرور جديدة",
-    "New to Monica?": "جديد لمونيكا؟",
+    "New to Monica?": "هل أنت جديد في Monica؟",
     "Next": "التالي",
     "Nickname": "كنية",
     "nickname": "كنية",
@@ -715,7 +715,7 @@
     "Played soccer": "لعبت كرة القدم",
     "Played tennis": "لعبت التنس",
     "Please choose a template for this new post": "الرجاء اختيار قالب لهذا المنصب الجديد",
-    "Please choose one template below to tell Monica how this contact should be displayed. Templates let you define which data should be displayed on the contact page.": "الرجاء اختيار نموذج واحد أدناه لإخبار مونيكا بكيفية عرض جهة الاتصال هذه. تتيح لك القوالب تحديد البيانات التي يجب عرضها على صفحة الاتصال.",
+    "Please choose one template below to tell Monica how this contact should be displayed. Templates let you define which data should be displayed on the contact page.": "الرجاء اختيار نموذج واحد أدناه لإخبار Monica بكيفية عرض جهة الاتصال هذه. تتيح لك القوالب تحديد البيانات التي يجب عرضها على صفحة الاتصال.",
     "Please click the button below to verify your email address.": "يرجى النقر على الزر أدناه للتحقق من عنوان بريدك الإلكتروني.",
     "Please complete this form to finalize your account.": "يرجى إكمال هذا النموذج لإنهاء حسابك.",
     "Please confirm access to your account by entering one of your emergency recovery codes.": "يرجى تأكيد الوصول إلى حسابك عن طريق إدخال أحد رموز الاسترداد المخصصة لحالات الطوارئ.",
@@ -727,7 +727,7 @@
     "Please enter your password to cancel the account": "الرجاء إدخال كلمة المرور الخاصة بك لإلغاء الحساب",
     "Please enter your password to confirm you would like to log out of your other browser sessions across all of your devices.": "الرجاء إدخال كلمة المرور الخاصة بك لتأكيد رغبتك في تسجيل الخروج من جلسات المتصفح الأخرى عبر جميع أجهزتك.",
     "Please indicate the contacts": "يرجى الإشارة إلى جهات الاتصال",
-    "Please join Monica": "يرجى الانضمام مونيكا",
+    "Please join Monica": "يرجى الانضمام Monica",
     "Please provide the email address of the person you would like to add to this team.": "يرجى كتابة عنوان البريد الإلكتروني للشخص الذي ترغب بإضافته إلى هذا الفريق.",
     "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "يرجى قراءة <link>الوثائق<\/link> الخاصة بنا لمعرفة المزيد حول هذه الميزة والمتغيرات التي يمكنك الوصول إليها.",
     "Please select a page on the left to load modules.": "الرجاء تحديد صفحة على اليسار لتحميل الوحدات.",
@@ -887,11 +887,10 @@
     "Templates": "قوالب",
     "Templates let you customize what data should be displayed on your contacts. You can define as many templates as you want, and choose which template should be used on which contact.": "تتيح لك القوالب تخصيص البيانات التي يجب عرضها على جهات الاتصال الخاصة بك. يمكنك تحديد أي عدد تريده من القوالب، واختيار القالب الذي يجب استخدامه على جهة الاتصال.",
     "Terms of Service": "شروط الاستخدام",
-    "Test email for Monica": "اختبار البريد الإلكتروني لمونيكا",
+    "Test email for Monica": "اختبار البريد الإلكتروني لMonica",
     "Test email sent!": "تم إرسال البريد الإلكتروني التجريبي!",
     "Thanks,": "شكرًا،",
-    "Thanks for giving Monica a try": "شكرا لإعطاء مونيكا المحاولة",
-    "Thanks for giving Monica a try.": "شكرا لإعطاء مونيكا المحاولة.",
+    "Thanks for giving Monica a try.": "شكرا لإعطاء Monica المحاولة.",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "شكرا لتسجيلك! قبل البدء، هل يمكنك التحقق من عنوان بريدك الإلكتروني عن طريق النقر على الرابط الذي أرسلناه إليك للتو عبر البريد الإلكتروني؟ إذا لم تتلق رسالة البريد الإلكتروني، فسنرسل لك بكل سرور رسالة أخرى.",
     "The :attribute must be at least :length characters.": ":Attribute يجب أن يتألف على الأقل من :length خانة.",
     "The :attribute must be at least :length characters and contain at least one number.": ":Attribute يجب أن يتألف على الأقل من :length خانة وأن تحتوي على رقم واحد على الأقل.",
@@ -961,7 +960,7 @@
     "The important dates in the next 12 months": "التواريخ المهمة في الـ 12 شهرًا القادمة",
     "The job information has been saved": "تم حفظ معلومات الوظيفة",
     "The journal lets you document your life with your own words.": "تتيح لك المجلة توثيق حياتك بكلماتك الخاصة.",
-    "The keys to manage uploads have not been set in this Monica instance.": "لم يتم تعيين مفاتيح إدارة التحميلات في مثيل مونيكا هذا.",
+    "The keys to manage uploads have not been set in this Monica instance.": "لم يتم تعيين مفاتيح إدارة التحميلات في مثيل Monica هذا.",
     "The label has been added": "تمت إضافة التسمية",
     "The label has been created": "تم إنشاء التسمية",
     "The label has been deleted": "تم حذف التسمية",
@@ -1073,7 +1072,7 @@
     "they\/them": "هم \/ لهم",
     "This address is not active anymore": "هذا العنوان لم يعد نشطا بعد الآن",
     "This device": "هذا الجهاز",
-    "This email is a test email to check if Monica can send an email to this email address.": "يعد هذا البريد الإلكتروني بمثابة بريد إلكتروني تجريبي للتحقق مما إذا كان بإمكان مونيكا إرسال بريد إلكتروني إلى عنوان البريد الإلكتروني هذا.",
+    "This email is a test email to check if Monica can send an email to this email address.": "يعد هذا البريد الإلكتروني بمثابة بريد إلكتروني تجريبي للتحقق مما إذا كان بإمكان Monica إرسال بريد إلكتروني إلى عنوان البريد الإلكتروني هذا.",
     "This is a secure area of the application. Please confirm your password before continuing.": "هذه منطقة آمنة للتطبيق. يرجى تأكيد كلمة المرور الخاصة بك قبل المتابعة.",
     "This is a test email": "هذه رسالة بريد إلكتروني تجريبية",
     "This is a test notification for :name": "هذا إشعار اختباري لـ :name",
@@ -1118,7 +1117,7 @@
     "Two factor authentication is now enabled. Scan the following QR code using your phone’s authenticator application or enter the setup key.": "تم الآن تمكين المصادقة الثنائية. قم بمسح رمز الاستجابة السريعة التالي باستخدام تطبيق المصادقة الخاص بهاتفك أو أدخل مفتاح الإعداد.",
     "Type": "يكتب",
     "Type:": "يكتب:",
-    "Type anything in the conversation with the Monica bot. It can be `start` for instance.": "اكتب أي شيء في المحادثة مع روبوت مونيكا. يمكن أن يكون \"البدء\" على سبيل المثال.",
+    "Type anything in the conversation with the Monica bot. It can be `start` for instance.": "اكتب أي شيء في المحادثة مع روبوت Monica. يمكن أن يكون \"البدء\" على سبيل المثال.",
     "Types": "أنواع",
     "Type something": "اطبع شيئا",
     "Unarchive contact": "إلغاء أرشفة جهة الاتصال",
@@ -1166,7 +1165,7 @@
     "Verified": "تم التحقق",
     "Verify Email Address": "التحقق من عنوان البريد الإلكتروني",
     "Verify this email address": "تحقق من هذا البريد الألكتروني",
-    "Version :version — commit [:short](:url).": "الإصدار :version - الالتزام [:short](:url).",
+    "Version :version — commit [:short](:url).": "الإصدار :version — الالتزام [:short](:url).",
     "Via Telegram": "عبر برقية",
     "Video call": "مكالمة فيديو",
     "View": "منظر",
@@ -1176,7 +1175,7 @@
     "View history": "عرض السجل",
     "View log": "سجل عرض",
     "View on map": "عرض على الخريطة",
-    "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "انتظر بضع ثواني حتى تتعرف مونيكا (التطبيق) عليك. سنرسل إليك إشعارًا مزيفًا لمعرفة ما إذا كان يعمل أم لا.",
+    "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "انتظر بضع ثواني حتى تتعرف Monica (التطبيق) عليك. سنرسل إليك إشعارًا مزيفًا لمعرفة ما إذا كان يعمل أم لا.",
     "Waiting for key…": "في انتظار المفتاح...",
     "Walked": "مشى",
     "Wallpaper": "ورق الجدران",
@@ -1192,7 +1191,7 @@
     "Wednesday": "الأربعاء",
     "We hope you'll like it.": "نأمل أن تنال إعجابك.",
     "We hope you will like what we’ve done.": "نأمل أن يعجبك ما فعلناه.",
-    "Welcome to Monica.": "مرحبا بكم في مونيكا.",
+    "Welcome to Monica.": "مرحبا بكم في Monica.",
     "Went to a bar": "ذهبت إلى الحانة",
     "We support Markdown to format the text (bold, lists, headings, etc…).": "نحن ندعم Markdown لتنسيق النص (غامق، قوائم، عناوين، إلخ...).",
     "We were unable to find a registered user with this email address.": "لم نتمكن من العثور على مستخدم مسجل بهذا البريد الإلكتروني.",
@@ -1208,7 +1207,7 @@
     "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "عند تمكين المصادقة الثنائية، ستتم مطالبتك برمز آمن وعشوائي أثناء المصادقة. يمكنك الحصول على هذا الرمز من تطبيق Google Authenticator بهاتفك.",
     "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "عند تمكين المصادقة الثنائية، سيُطلب منك رمزًا آمنًا وعشوائيًا أثناء المصادقة. يمكنك استرداد هذا الرمز المميز من تطبيق Authenticator بهاتفك.",
     "When was the loan made?": "متى تم القرض؟",
-    "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "عندما تحدد علاقة بين جهتي اتصال، على سبيل المثال علاقة الأب والابن، تقوم مونيكا بإنشاء علاقتين، واحدة لكل جهة اتصال:",
+    "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "عندما تحدد علاقة بين جهتي اتصال، على سبيل المثال علاقة الأب والابن، تقوم Monica بإنشاء علاقتين، واحدة لكل جهة اتصال:",
     "Which email address should we send the notification to?": "ما هو عنوان البريد الإلكتروني الذي يجب أن نرسل الإشعار إليه؟",
     "Who called?": "الذي اتصل؟",
     "Who makes the loan?": "من الذي يقدم القرض؟",
@@ -1225,15 +1224,15 @@
     "year": "سنة",
     "Years": "سنين",
     "You are here:": "أنت هنا:",
-    "You are invited to join Monica": "أنت مدعو للانضمام إلى مونيكا",
+    "You are invited to join Monica": "أنت مدعو للانضمام إلى Monica",
     "You are receiving this email because we received a password reset request for your account.": "لقد استلمت هذا الإيميل لأننا استقبلنا طلباً لاستعادة كلمة مرور حسابك.",
     "you can't even use your current username or password to sign in,": "ولا يمكنك حتى استخدام اسم المستخدم أو كلمة المرور الحالية لتسجيل الدخول،",
-    "you can't import any data from your current Monica account(yet),": "لا يمكنك استيراد أي بيانات من حساب مونيكا الحالي الخاص بك (حتى الآن)،",
+    "you can't import any data from your current Monica account(yet),": "لا يمكنك استيراد أي بيانات من حساب Monica الحالي الخاص بك (حتى الآن)،",
     "You can add job information to your contacts and manage the companies here in this tab.": "يمكنك إضافة معلومات الوظيفة إلى جهات الاتصال الخاصة بك وإدارة الشركات هنا في علامة التبويب هذه.",
     "You can add more account to log in to our service with one click.": "يمكنك إضافة المزيد من الحسابات لتسجيل الدخول إلى خدمتنا بنقرة واحدة.",
     "You can be notified through different channels: emails, a Telegram message, on Facebook. You decide.": "يمكن أن يتم إعلامك من خلال قنوات مختلفة: رسائل البريد الإلكتروني، ورسالة Telegram، على Facebook. انت صاحب القرار.",
     "You can change that at any time.": "يمكنك تغيير ذلك في أي وقت.",
-    "You can choose how you want Monica to display dates in the application.": "يمكنك اختيار الطريقة التي تريد أن تعرض بها مونيكا التواريخ في التطبيق.",
+    "You can choose how you want Monica to display dates in the application.": "يمكنك اختيار الطريقة التي تريد أن تعرض بها Monica التواريخ في التطبيق.",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "يمكنك اختيار العملات التي يجب تمكينها في حسابك، والعملات التي لا ينبغي تمكينها.",
     "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "يمكنك تخصيص كيفية عرض جهات الاتصال وفقًا لذوقك\/ثقافتك. ربما ترغب في استخدام جيمس بوند بدلاً من بوند جيمس. هنا، يمكنك تحديد ذلك في الإرادة.",
     "You can customize the criteria that let you track your mood.": "يمكنك تخصيص المعايير التي تتيح لك تتبع حالتك المزاجية.",
@@ -1252,7 +1251,7 @@
     "You may not delete your personal team.": "لا يمكنك حذف فريقك الشخصي.",
     "You may not leave a team that you created.": "لا يمكنك مغادرة الفريق الذي أنشأته.",
     "You might need to reload the page to see the changes.": "قد تحتاج إلى إعادة تحميل الصفحة لرؤية التغييرات.",
-    "You need at least one template for contacts to be displayed. Without a template, Monica won’t know which information it should display.": "تحتاج إلى قالب واحد على الأقل حتى يتم عرض جهات الاتصال. بدون القالب، لن تعرف مونيكا المعلومات التي يجب أن تعرضها.",
+    "You need at least one template for contacts to be displayed. Without a template, Monica won’t know which information it should display.": "تحتاج إلى قالب واحد على الأقل حتى يتم عرض جهات الاتصال. بدون القالب، لن تعرف Monica المعلومات التي يجب أن تعرضها.",
     "Your account current usage": "الاستخدام الحالي لحسابك",
     "Your account has been created": "لقد تم إنشاء حسابك",
     "Your account is linked": "حسابك مرتبط",
