--- a/lang/bn.json
+++ b/lang/bn.json
@@ -36,7 +36,7 @@
     ":file in :class at line :line": ":line লাইনে :class :file",
     ":Name called": ":Name কল করেছে",
     ":Name called, but I didn’t answer": ":Name কল, কিন্তু আমি উত্তর করিনি",
-    ":UserName invites you to join Monica, an open source personal CRM, designed to help you document your relationships.": ":UserName আপনাকে মনিকার সাথে যোগ দিতে আমন্ত্রণ জানিয়েছে, একটি ওপেন সোর্স ব্যক্তিগত CRM, যা আপনাকে আপনার সম্পর্ক নথিভুক্ত করতে সাহায্য করার জন্য ডিজাইন করা হয়েছে৷",
+    ":UserName invites you to join Monica, an open source personal CRM, designed to help you document your relationships.": ":UserName আপনাকে Monica সাথে যোগ দিতে আমন্ত্রণ জানিয়েছে, একটি ওপেন সোর্স ব্যক্তিগত CRM, যা আপনাকে আপনার সম্পর্ক নথিভুক্ত করতে সাহায্য করার জন্য ডিজাইন করা হয়েছে৷",
     "Accept Invitation": "আমন্ত্রণ গ্রহণ",
     "Accept invitation and create your account": "আমন্ত্রণ গ্রহণ করুন এবং আপনার অ্যাকাউন্ট তৈরি করুন",
     "Account and security": "অ্যাকাউন্ট এবং নিরাপত্তা",
@@ -267,7 +267,7 @@
     "colleague": "সহকর্মী",
     "Companies": "কোম্পানিগুলো",
     "Company name": "কোমপানির নাম",
-    "Compared to Monica:": "মনিকার তুলনায়:",
+    "Compared to Monica:": "Monica তুলনায়:",
     "Configure how we should notify you": "আমরা আপনাকে কিভাবে অবহিত করব তা কনফিগার করুন",
     "Confirm": "নিশ্চিত করুন",
     "Confirm Password": "পাসওয়ার্ড নিশ্চিত করুন",
@@ -307,7 +307,7 @@
     "Create a reminder": "একটি অনুস্মারক তৈরি করুন",
     "Create a slice of life": "জীবনের একটি টুকরা তৈরি করুন",
     "Create at least one page to display contact’s data.": "পরিচিতির ডেটা প্রদর্শন করতে কমপক্ষে একটি পৃষ্ঠা তৈরি করুন।",
-    "Create at least one template to use Monica.": "মনিকা ব্যবহার করার জন্য অন্তত একটি টেমপ্লেট তৈরি করুন।",
+    "Create at least one template to use Monica.": "Monica ব্যবহার করার জন্য অন্তত একটি টেমপ্লেট তৈরি করুন।",
     "Create a user": "একটি ব্যবহারকারী তৈরি করুন",
     "Create a vault": "একটি খিলান তৈরি করুন",
     "Created.": "তৈরি হয়েছে।",
@@ -621,9 +621,9 @@
     "miles (mi)": "মাইল (মাই)",
     "Modules in this page": "এই পৃষ্ঠায় মডিউল",
     "Monday": "সোমবার",
-    "Monica. All rights reserved. 2017 — :date.": "মনিকা। সমস্ত অধিকার সংরক্ষিত. 2017 — :date।",
-    "Monica is open source, made by hundreds of people from all around the world.": "মনিকা হল ওপেন সোর্স, সারা বিশ্বের শত শত মানুষ তৈরি করেছে।",
-    "Monica was made to help you document your life and your social interactions.": "মনিকা আপনাকে আপনার জীবন এবং আপনার সামাজিক মিথস্ক্রিয়া নথিভুক্ত করতে সাহায্য করার জন্য তৈরি করা হয়েছিল।",
+    "Monica. All rights reserved. 2017 — :date.": "Monica। সমস্ত অধিকার সংরক্ষিত. 2017 — :date।",
+    "Monica is open source, made by hundreds of people from all around the world.": "Monica হল ওপেন সোর্স, সারা বিশ্বের শত শত মানুষ তৈরি করেছে।",
+    "Monica was made to help you document your life and your social interactions.": "Monica আপনাকে আপনার জীবন এবং আপনার সামাজিক মিথস্ক্রিয়া নথিভুক্ত করতে সাহায্য করার জন্য তৈরি করা হয়েছিল।",
     "Month": "মাস",
     "month": "মাস",
     "Mood in the year": "মেজাজ ২০১২ সালে",
@@ -640,7 +640,7 @@
     "Nature of the call": "কলের প্রকৃতি",
     "nephew\/niece": "ভাগিনা ভাগ্নি",
     "New Password": "নতুন পাসওয়ার্ড",
-    "New to Monica?": "মনিকা নতুন?",
+    "New to Monica?": "Monica নতুন?",
     "Next": "পরবর্তী",
     "Nickname": "ডাকনাম",
     "nickname": "ডাকনাম",
@@ -671,7 +671,7 @@
     "Offered": "অফার করা হয়েছে",
     "Once a team is deleted, all of its resources and data will be permanently deleted. Before deleting this team, please download any data or information regarding this team that you wish to retain.": "একবার একটি দল মুছে ফেলা হলে, তার সমস্ত রিসোর্সসমূহ এবং ডেটা স্থায়ীভাবে মুছে যাবে৷ এই দলটি মুছে ফেলার আগে, অনুগ্রহ করে এই টিম সম্পর্কিত যে কোনও ডেটা বা তথ্য ডাউনলোড করুন যা আপনি রেখে দিতে চান।",
     "Once you cancel,": "একবার বাতিল করলে,",
-    "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "একবার আপনি নীচের সেটআপ বোতামটি ক্লিক করলে, আমরা আপনাকে যে বোতামটি সরবরাহ করব তা দিয়ে আপনাকে টেলিগ্রাম খুলতে হবে। এটি আপনার জন্য মনিকা টেলিগ্রাম বট সনাক্ত করবে।",
+    "Once you click the Setup button below, you’ll have to open Telegram with the button we’ll provide you with. This will locate the Monica Telegram bot for you.": "একবার আপনি নীচের সেটআপ বোতামটি ক্লিক করলে, আমরা আপনাকে যে বোতামটি সরবরাহ করব তা দিয়ে আপনাকে টেলিগ্রাম খুলতে হবে। এটি আপনার জন্য Monica টেলিগ্রাম বট সনাক্ত করবে।",
     "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "একবার আপনার অ্যাকাউন্ট মুছে ফেলা হলে, এর সমস্ত রিসোর্সসমূহ এবং ডেটা স্থায়ীভাবে মুছে যাবে। আপনার অ্যাকাউন্ট মুছে ফেলার আগে, আপনি রেখে দিতে চান এমন কোনো ডেটা বা তথ্য ডাউনলোড করে রাখুন।",
     "Only once, when the next occurence of the date occurs.": "শুধুমাত্র একবার, যখন তারিখের পরবর্তী ঘটনা ঘটে।",
     "Oops! Something went wrong.": "উফ! কিছু ভুল হয়েছে.",
@@ -715,7 +715,7 @@
     "Played soccer": "ফুটবল খেলেছিলাম",
     "Played tennis": "টেনিস খেলেছিলাম",
     "Please choose a template for this new post": "এই নতুন পোস্টের জন্য একটি টেমপ্লেট চয়ন করুন",
-    "Please choose one template below to tell Monica how this contact should be displayed. Templates let you define which data should be displayed on the contact page.": "এই পরিচিতিটি কীভাবে প্রদর্শিত হবে তা মনিকাকে জানাতে দয়া করে নীচের একটি টেমপ্লেট চয়ন করুন৷ টেমপ্লেট আপনাকে সংজ্ঞায়িত করতে দেয় যে যোগাযোগ পৃষ্ঠায় কোন ডেটা প্রদর্শিত হবে।",
+    "Please choose one template below to tell Monica how this contact should be displayed. Templates let you define which data should be displayed on the contact page.": "এই পরিচিতিটি কীভাবে প্রদর্শিত হবে তা Monicaকে জানাতে দয়া করে নীচের একটি টেমপ্লেট চয়ন করুন৷ টেমপ্লেট আপনাকে সংজ্ঞায়িত করতে দেয় যে যোগাযোগ পৃষ্ঠায় কোন ডেটা প্রদর্শিত হবে।",
     "Please click the button below to verify your email address.": "আপনার ইমেল ঠিকানা যাচাই করার জন্য নিচের বাটনে ক্লিক করুন ।",
     "Please complete this form to finalize your account.": "আপনার অ্যাকাউন্ট চূড়ান্ত করতে এই ফর্মটি পূরণ করুন.",
     "Please confirm access to your account by entering one of your emergency recovery codes.": "আপনার জরুরী পুনরুদ্ধারের কোড এক লিখে আপনার অ্যাকাউন্টে অ্যাক্সেস নিশ্চিত করুন ।",
@@ -727,7 +727,7 @@
     "Please enter your password to cancel the account": "অ্যাকাউন্ট বাতিল করতে আপনার পাসওয়ার্ড লিখুন",
     "Please enter your password to confirm you would like to log out of your other browser sessions across all of your devices.": "আপনি আপনার সকল ডিভাইস থেকে আপনার অন্য ব্রাউজার সেশন লগ আউট করতে চান তা নিশ্চিত করার জন্য আপনার পাসওয়ার্ড লিখুন ।",
     "Please indicate the contacts": "পরিচিতি নির্দেশ করুন",
-    "Please join Monica": "মনিকা যোগ দিন",
+    "Please join Monica": "Monica যোগ দিন",
     "Please provide the email address of the person you would like to add to this team.": "আপনি এই দলের যোগ করতে চাই ব্যক্তির ইমেল ঠিকানা প্রদান করুন ।",
     "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "এই বৈশিষ্ট্য সম্পর্কে আরও জানতে এবং কোন ভেরিয়েবলগুলিতে আপনার অ্যাক্সেস আছে অনুগ্রহ করে আমাদের <link>ডকুমেন্টেশন<\/link> পড়ুন।",
     "Please select a page on the left to load modules.": "মডিউল লোড করতে দয়া করে বাম দিকে একটি পৃষ্ঠা নির্বাচন করুন৷",
@@ -887,11 +887,10 @@
     "Templates": "টেমপ্লেট",
     "Templates let you customize what data should be displayed on your contacts. You can define as many templates as you want, and choose which template should be used on which contact.": "টেমপ্লেটগুলি আপনাকে আপনার পরিচিতিতে কোন ডেটা প্রদর্শন করা উচিত তা কাস্টমাইজ করতে দেয়। আপনি যতগুলি চান ততগুলি টেমপ্লেট সংজ্ঞায়িত করতে পারেন এবং কোন টেমপ্লেটটি কোন পরিচিতিতে ব্যবহার করা উচিত তা চয়ন করতে পারেন৷",
     "Terms of Service": "পরিষেবার শর্তাদি",
-    "Test email for Monica": "মনিকার জন্য ইমেল পরীক্ষা করুন",
+    "Test email for Monica": "Monica জন্য ইমেল পরীক্ষা করুন",
     "Test email sent!": "পরীক্ষার ইমেল পাঠানো হয়েছে!",
     "Thanks,": "ধন্যবাদ,",
-    "Thanks for giving Monica a try": "মনিকা চেষ্টা করার জন্য ধন্যবাদ",
-    "Thanks for giving Monica a try.": "মনিকা চেষ্টা করার জন্য ধন্যবাদ.",
+    "Thanks for giving Monica a try.": "Monica চেষ্টা করার জন্য ধন্যবাদ.",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "সাইন আপ করার জন্য ধন্যবাদ! শুরু করার আগে, আমরা এইমাত্র আপনাকে যে লিঙ্কটি ইমেল করেছি তাতে ক্লিক করে আপনি কি আপনার ইমেল ঠিকানা যাচাই করতে পারেন? আপনি যদি ইমেলটি না পেয়ে থাকেন, আমরা আনন্দের সাথে আপনাকে আরেকটি পাঠাব।",
     "The :attribute must be at least :length characters.": ":Attribute অন্তত হতে হবে :length অক্ষর ।",
     "The :attribute must be at least :length characters and contain at least one number.": ":Attribute অন্তত :length অক্ষরের হতে হবে এবং অন্তত একটি নম্বর অন্তর্ভুক্ত থাকতে হবে।",
@@ -961,7 +960,7 @@
     "The important dates in the next 12 months": "পরবর্তী 12 মাসের গুরুত্বপূর্ণ তারিখ",
     "The job information has been saved": "চাকরির তথ্য সংরক্ষণ করা হয়েছে",
     "The journal lets you document your life with your own words.": "জার্নাল আপনাকে আপনার নিজের কথা দিয়ে আপনার জীবনকে নথিভুক্ত করতে দেয়।",
-    "The keys to manage uploads have not been set in this Monica instance.": "আপলোডগুলি পরিচালনা করার কীগুলি এই মনিকা উদাহরণে সেট করা হয়নি৷",
+    "The keys to manage uploads have not been set in this Monica instance.": "আপলোডগুলি পরিচালনা করার কীগুলি এই Monica উদাহরণে সেট করা হয়নি৷",
     "The label has been added": "লেবেল যোগ করা হয়েছে",
     "The label has been created": "লেবেল তৈরি করা হয়েছে",
     "The label has been deleted": "লেবেল মুছে ফেলা হয়েছে",
@@ -1073,7 +1072,7 @@
     "they\/them": "তারা তাদের",
     "This address is not active anymore": "এই ঠিকানা আর সক্রিয় নয়",
     "This device": "এই ডিভাইসটি",
-    "This email is a test email to check if Monica can send an email to this email address.": "মনিকা এই ইমেল ঠিকানায় একটি ইমেল পাঠাতে পারে কিনা তা পরীক্ষা করার জন্য এই ইমেলটি একটি পরীক্ষামূলক ইমেল।",
+    "This email is a test email to check if Monica can send an email to this email address.": "Monica এই ইমেল ঠিকানায় একটি ইমেল পাঠাতে পারে কিনা তা পরীক্ষা করার জন্য এই ইমেলটি একটি পরীক্ষামূলক ইমেল।",
     "This is a secure area of the application. Please confirm your password before continuing.": "এই অ্যাপ্লিকেশনটি একটি নিরাপদ এলাকা ৷ অব্যাহত আগে আপনার পাসওয়ার্ড নিশ্চিত করুন ৷",
     "This is a test email": "এটি একটি পরীক্ষামূলক ইমেল",
     "This is a test notification for :name": "এটি :name এর জন্য একটি পরীক্ষার বিজ্ঞপ্তি",
@@ -1118,7 +1117,7 @@
     "Two factor authentication is now enabled. Scan the following QR code using your phone’s authenticator application or enter the setup key.": "দুই ফ্যাক্টর প্রমাণীকরণ এখন সক্রিয় করা হয়েছে. আপনার ফোনের প্রমাণীকরণকারী অ্যাপ্লিকেশন ব্যবহার করে নিম্নলিখিত QR কোড স্ক্যান করুন বা সেটআপ কী লিখুন।",
     "Type": "টাইপ",
     "Type:": "প্রকার:",
-    "Type anything in the conversation with the Monica bot. It can be `start` for instance.": "মনিকা বটের সাথে কথোপকথনে কিছু টাইপ করুন। উদাহরণস্বরূপ এটি ’শুরু’ হতে পারে।",
+    "Type anything in the conversation with the Monica bot. It can be `start` for instance.": "Monica বটের সাথে কথোপকথনে কিছু টাইপ করুন। উদাহরণস্বরূপ এটি ’শুরু’ হতে পারে।",
     "Types": "প্রকারভেদ",
     "Type something": "কিছু লেখো",
     "Unarchive contact": "আর্কাইভ পরিচিতি",
@@ -1176,7 +1175,7 @@
     "View history": "ইতিহাস দেখ",
     "View log": "লগ দেখুন",
     "View on map": "মানচিত্রে দেখুন",
-    "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "মনিকা (অ্যাপ্লিকেশন) আপনাকে চিনতে কয়েক সেকেন্ড অপেক্ষা করুন। এটি কাজ করে কিনা তা দেখতে আমরা আপনাকে একটি জাল বিজ্ঞপ্তি পাঠাব।",
+    "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Monica (অ্যাপ্লিকেশন) আপনাকে চিনতে কয়েক সেকেন্ড অপেক্ষা করুন। এটি কাজ করে কিনা তা দেখতে আমরা আপনাকে একটি জাল বিজ্ঞপ্তি পাঠাব।",
     "Waiting for key…": "চাবির জন্য অপেক্ষা করা হচ্ছে...",
     "Walked": "হেঁটেছেন",
     "Wallpaper": "ওয়ালপেপার",
@@ -1192,7 +1191,7 @@
     "Wednesday": "বুধবার",
     "We hope you'll like it.": "আমরা আশা করি আপনি এটা পছন্দ করবেন.",
     "We hope you will like what we’ve done.": "আমরা আশা করি আপনি যা করেছি তা পছন্দ করবেন।",
-    "Welcome to Monica.": "মনিকাকে স্বাগতম।",
+    "Welcome to Monica.": "Monica এ স্বাগতম।",
     "Went to a bar": "একটা বারে গেল",
     "We support Markdown to format the text (bold, lists, headings, etc…).": "আমরা টেক্সট ফর্ম্যাট করতে মার্কডাউন সমর্থন করি (বোল্ড, তালিকা, শিরোনাম, ইত্যাদি...)।",
     "We were unable to find a registered user with this email address.": "আমরা এই ইমেল ঠিকানা সহ রেজিস্টার্ড ব্যবহারকারী খুঁজে পাইনি।",
@@ -1208,7 +1207,7 @@
     "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "প্রমাণীকরণ সক্রিয় করা হয় দুই ফ্যাক্টর, আপনি অনুমোদনের সময় একটি নিরাপদ, র্যান্ডম টোকেন জন্য অনুরোধ করা হবে । আপনি আপনার ফোন এর গুগল প্রমাণকারী অ্যাপ্লিকেশন থেকে এই টোকেন উদ্ধার হতে পারে ।",
     "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "যখন দুটি ফ্যাক্টর প্রমাণীকরণ সক্ষম করা হয়, আপনাকে প্রমাণীকরণের সময় একটি নিরাপদ, এলোমেলো টোকেনের জন্য অনুরোধ করা হবে। আপনি আপনার ফোনের প্রমাণীকরণকারী অ্যাপ্লিকেশন থেকে এই টোকেনটি পুনরুদ্ধার করতে পারেন।",
     "When was the loan made?": "কখন ঋণ করা হয়েছিল?",
-    "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "আপনি যখন দুটি পরিচিতির মধ্যে একটি সম্পর্ককে সংজ্ঞায়িত করেন, উদাহরণস্বরূপ একটি পিতা-পুত্রের সম্পর্ক, মনিকা দুটি সম্পর্ক তৈরি করে, প্রতিটি পরিচিতির জন্য একটি:",
+    "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "আপনি যখন দুটি পরিচিতির মধ্যে একটি সম্পর্ককে সংজ্ঞায়িত করেন, উদাহরণস্বরূপ একটি পিতা-পুত্রের সম্পর্ক, Monica দুটি সম্পর্ক তৈরি করে, প্রতিটি পরিচিতির জন্য একটি:",
     "Which email address should we send the notification to?": "আমরা কোন ইমেল ঠিকানায় বিজ্ঞপ্তি পাঠাতে হবে?",
     "Who called?": "কে ডেকেছিল?",
     "Who makes the loan?": "ঋণ কে করে?",
@@ -1225,15 +1224,15 @@
     "year": "বছর",
     "Years": "বছর",
     "You are here:": "তুমি এখানে:",
-    "You are invited to join Monica": "আপনাকে মনিকার সাথে যোগ দেওয়ার জন্য আমন্ত্রণ জানানো হচ্ছে",
+    "You are invited to join Monica": "আপনাকে Monica সাথে যোগ দেওয়ার জন্য আমন্ত্রণ জানানো হচ্ছে",
     "You are receiving this email because we received a password reset request for your account.": "আমরা আপনার অ্যাকাউন্টের জন্য একটি পাসওয়ার্ড রিসেট অনুরোধ পেয়েছি, কারণ আপনি এই ইমেইল পাচ্ছেন ।",
     "you can't even use your current username or password to sign in,": "এমনকি আপনি সাইন ইন করতে আপনার বর্তমান ব্যবহারকারীর নাম বা পাসওয়ার্ড ব্যবহার করতে পারবেন না,",
-    "you can't import any data from your current Monica account(yet),": "আপনি আপনার বর্তমান মনিকা অ্যাকাউন্ট থেকে কোনো ডেটা আমদানি করতে পারবেন না (এখনও),",
+    "you can't import any data from your current Monica account(yet),": "আপনি আপনার বর্তমান Monica অ্যাকাউন্ট থেকে কোনো ডেটা আমদানি করতে পারবেন না (এখনও),",
     "You can add job information to your contacts and manage the companies here in this tab.": "আপনি এই ট্যাবে আপনার পরিচিতিতে চাকরির তথ্য যোগ করতে পারেন এবং কোম্পানিগুলি পরিচালনা করতে পারেন।",
     "You can add more account to log in to our service with one click.": "আপনি এক ক্লিকে আমাদের পরিষেবাতে লগ ইন করতে আরও অ্যাকাউন্ট যোগ করতে পারেন।",
     "You can be notified through different channels: emails, a Telegram message, on Facebook. You decide.": "আপনাকে বিভিন্ন চ্যানেলের মাধ্যমে অবহিত করা যেতে পারে: ইমেল, একটি টেলিগ্রাম বার্তা, Facebook-এ। তুমি ঠিক কর.",
     "You can change that at any time.": "আপনি যে কোনো সময় এটি পরিবর্তন করতে পারেন.",
-    "You can choose how you want Monica to display dates in the application.": "আপনি কীভাবে মনিকাকে অ্যাপ্লিকেশনটিতে তারিখগুলি প্রদর্শন করতে চান তা চয়ন করতে পারেন৷",
+    "You can choose how you want Monica to display dates in the application.": "আপনি কীভাবে Monicaকে অ্যাপ্লিকেশনটিতে তারিখগুলি প্রদর্শন করতে চান তা চয়ন করতে পারেন৷",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "আপনার অ্যাকাউন্টে কোন মুদ্রা সক্ষম করা উচিত এবং কোনটি উচিত নয় তা আপনি চয়ন করতে পারেন৷",
     "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "আপনার নিজস্ব স্বাদ\/সংস্কৃতি অনুযায়ী পরিচিতিগুলি কীভাবে প্রদর্শিত হবে তা আপনি কাস্টমাইজ করতে পারেন। সম্ভবত আপনি বন্ড জেমসের পরিবর্তে জেমস বন্ড ব্যবহার করতে চান। এখানে, আপনি ইচ্ছামত এটি সংজ্ঞায়িত করতে পারেন.",
     "You can customize the criteria that let you track your mood.": "আপনি মানদণ্ড কাস্টমাইজ করতে পারেন যা আপনাকে আপনার মেজাজ ট্র্যাক করতে দেয়।",
@@ -1252,7 +1251,7 @@
     "You may not delete your personal team.": "আপনি আপনার ব্যক্তিগত দল মুছে ফেলতে পারেন না ।",
     "You may not leave a team that you created.": "আপনি আপনার তৈরি করা একটি দল ছেড়ে না পারে ।",
     "You might need to reload the page to see the changes.": "পরিবর্তনগুলি দেখতে আপনাকে পৃষ্ঠাটি পুনরায় লোড করতে হতে পারে৷",
-    "You need at least one template for contacts to be displayed. Without a template, Monica won’t know which information it should display.": "পরিচিতিগুলি প্রদর্শনের জন্য আপনার কমপক্ষে একটি টেমপ্লেট প্রয়োজন৷ একটি টেমপ্লেট ছাড়া, মনিকা জানবে না যে এটি কোন তথ্য প্রদর্শন করবে৷",
+    "You need at least one template for contacts to be displayed. Without a template, Monica won’t know which information it should display.": "পরিচিতিগুলি প্রদর্শনের জন্য আপনার কমপক্ষে একটি টেমপ্লেট প্রয়োজন৷ একটি টেমপ্লেট ছাড়া, Monica জানবে না যে এটি কোন তথ্য প্রদর্শন করবে৷",
     "Your account current usage": "আপনার অ্যাকাউন্টের বর্তমান ব্যবহার",
     "Your account has been created": "আপনার অ্যাকাউন্ট তৈরি করা হয়েছে",
     "Your account is linked": "আপনার অ্যাকাউন্ট লিঙ্ক করা হয়েছে",
@@ -1267,8 +1266,8 @@
     "Your mood this year": "এই বছর আপনার মেজাজ",
     "Your name here will be used to add yourself as a contact.": "এখানে আপনার নামটি নিজেকে পরিচিতি হিসাবে যুক্ত করতে ব্যবহার করা হবে৷",
     "You wanted to be reminded of the following:": "আপনি নিম্নলিখিত মনে করিয়ে দিতে চেয়েছিলেন:",
-    "You WILL still have to delete your account on Monica or OfficeLife.": "আপনাকে এখনও মনিকা বা অফিসলাইফে আপনার অ্যাকাউন্ট মুছতে হবে।",
-    "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "আপনাকে মনিকার এই ইমেল ঠিকানাটি ব্যবহার করার জন্য আমন্ত্রণ জানানো হয়েছে, একটি ওপেন সোর্স ব্যক্তিগত CRM, যাতে আমরা আপনাকে বিজ্ঞপ্তি পাঠাতে এটি ব্যবহার করতে পারি।",
+    "You WILL still have to delete your account on Monica or OfficeLife.": "আপনাকে এখনও Monica বা অফিসলাইফে আপনার অ্যাকাউন্ট মুছতে হবে।",
+    "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "আপনাকে Monica এই ইমেল ঠিকানাটি ব্যবহার করার জন্য আমন্ত্রণ জানানো হয়েছে, একটি ওপেন সোর্স ব্যক্তিগত CRM, যাতে আমরা আপনাকে বিজ্ঞপ্তি পাঠাতে এটি ব্যবহার করতে পারি।",
     "ze\/hir": "ze\/hir",
     "⚠️ Danger zone": "⚠️ বিপদ অঞ্চল",
     "🌳 Chalet": "🌳 চালেট",
