--- a/lang/ca.json
+++ b/lang/ca.json
@@ -267,7 +267,7 @@
     "colleague": "col·lega",
     "Companies": "Empreses",
     "Company name": "Nom de la companyia",
-    "Compared to Monica:": "En comparació amb la Mònica:",
+    "Compared to Monica:": "En comparació amb la Monica:",
     "Configure how we should notify you": "Configureu com us hem de notificar",
     "Confirm": "Confirmar",
     "Confirm Password": "Confirmar contrasenya",
@@ -307,7 +307,7 @@
     "Create a reminder": "Crea un recordatori",
     "Create a slice of life": "Crea un tros de vida",
     "Create at least one page to display contact’s data.": "Creeu almenys una pàgina per mostrar les dades del contacte.",
-    "Create at least one template to use Monica.": "Creeu almenys una plantilla per utilitzar la Mònica.",
+    "Create at least one template to use Monica.": "Creeu almenys una plantilla per utilitzar la Monica.",
     "Create a user": "Crear un usuari",
     "Create a vault": "Crea una volta",
     "Created.": "Creat.",
@@ -621,7 +621,7 @@
     "miles (mi)": "milles (mi)",
     "Modules in this page": "Mòduls d’aquesta pàgina",
     "Monday": "dilluns",
-    "Monica. All rights reserved. 2017 — :date.": "Mònica. Tots els drets reservats. 2017 — :date.",
+    "Monica. All rights reserved. 2017 — :date.": "Monica. Tots els drets reservats. 2017 — :date.",
     "Monica is open source, made by hundreds of people from all around the world.": "Monica és de codi obert, fet per centenars de persones de tot el món.",
     "Monica was made to help you document your life and your social interactions.": "Monica va ser creada per ajudar-te a documentar la teva vida i les teves interaccions socials.",
     "Month": "Mes",
@@ -640,7 +640,7 @@
     "Nature of the call": "Naturalesa de la convocatòria",
     "nephew\/niece": "nebot neboda",
     "New Password": "Contrasenya Nova",
-    "New to Monica?": "Nou a la Mònica?",
+    "New to Monica?": "Nou a la Monica?",
     "Next": "Pròxim",
     "Nickname": "Pseudònim",
     "nickname": "sobrenom",
@@ -727,7 +727,7 @@
     "Please enter your password to cancel the account": "Introduïu la vostra contrasenya per cancel·lar el compte",
     "Please enter your password to confirm you would like to log out of your other browser sessions across all of your devices.": "Si us plau, introduïu la vostra contrasenya per confirmar que voleu sortir de les altres sessions del navegador a través de tots els dispositius.",
     "Please indicate the contacts": "Si us plau, indiqueu els contactes",
-    "Please join Monica": "Si us plau, uneix-te a la Mònica",
+    "Please join Monica": "Si us plau, uneix-te a la Monica",
     "Please provide the email address of the person you would like to add to this team.": "Si us plau, introduïu l'adreça electrònica de la persona que t'agradaria afegir a aquest equip.",
     "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "Si us plau, llegiu la nostra <link>documentació<\/link> per saber més sobre aquesta funció i a quines variables teniu accés.",
     "Please select a page on the left to load modules.": "Seleccioneu una pàgina a l’esquerra per carregar mòduls.",
@@ -887,11 +887,10 @@
     "Templates": "Plantilles",
     "Templates let you customize what data should be displayed on your contacts. You can define as many templates as you want, and choose which template should be used on which contact.": "Les plantilles us permeten personalitzar quines dades s’han de mostrar als vostres contactes. Podeu definir tantes plantilles com vulgueu i triar quina plantilla s’ha d’utilitzar en quin contacte.",
     "Terms of Service": "Condicions del Servei",
-    "Test email for Monica": "Correu electrònic de prova per a la Mònica",
+    "Test email for Monica": "Correu electrònic de prova per a la Monica",
     "Test email sent!": "Correu electrònic de prova enviat!",
     "Thanks,": "Gràcies,",
-    "Thanks for giving Monica a try": "Gràcies per provar la Mònica",
-    "Thanks for giving Monica a try.": "Gràcies per provar la Mònica.",
+    "Thanks for giving Monica a try.": "Gràcies per provar la Monica.",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Gràcies per registrar-te! Abans de començar, podríeu verificar la vostra adreça electrònica fent clic a l’enllaç que us acabem d’enviar per correu electrònic? Si no has rebut el correu electrònic, t’enviarem un altre amb molt de gust.",
     "The :attribute must be at least :length characters.": "La :attribute ha de tenir com a mínim :length caràcters.",
     "The :attribute must be at least :length characters and contain at least one number.": "La :attribute ha de tenir com a mínim :length caràcters i com a mínim un número.",
@@ -961,7 +960,7 @@
     "The important dates in the next 12 months": "Les dates importants dels propers 12 mesos",
     "The job information has been saved": "La informació de la feina s’ha desat",
     "The journal lets you document your life with your own words.": "El diari et permet documentar la teva vida amb les teves pròpies paraules.",
-    "The keys to manage uploads have not been set in this Monica instance.": "Les claus per gestionar les càrregues no s’han establert en aquesta instància de la Mònica.",
+    "The keys to manage uploads have not been set in this Monica instance.": "Les claus per gestionar les càrregues no s’han establert en aquesta instància de la Monica.",
     "The label has been added": "S’ha afegit l’etiqueta",
     "The label has been created": "S’ha creat l’etiqueta",
     "The label has been deleted": "L’etiqueta s’ha suprimit",
@@ -1073,7 +1072,7 @@
     "they\/them": "ells\/elles",
     "This address is not active anymore": "Aquesta adreça ja no està activa",
     "This device": "Aquest dispositiu",
-    "This email is a test email to check if Monica can send an email to this email address.": "Aquest correu electrònic és un correu electrònic de prova per comprovar si la Mònica pot enviar un correu electrònic a aquesta adreça electrònica.",
+    "This email is a test email to check if Monica can send an email to this email address.": "Aquest correu electrònic és un correu electrònic de prova per comprovar si la Monica pot enviar un correu electrònic a aquesta adreça electrònica.",
     "This is a secure area of the application. Please confirm your password before continuing.": "Aquesta és una àrea de seguretat de l'aplicació. Si us plau, confirmeu la vostra contrasenya abans de continuar.",
     "This is a test email": "Aquest és un correu electrònic de prova",
     "This is a test notification for :name": "Aquesta és una notificació de prova per a :name",
@@ -1192,7 +1191,7 @@
     "Wednesday": "dimecres",
     "We hope you'll like it.": "Esperem que us agradi.",
     "We hope you will like what we’ve done.": "Esperem que us agradi el que hem fet.",
-    "Welcome to Monica.": "Benvinguda a Mònica.",
+    "Welcome to Monica.": "Benvinguda a Monica.",
     "Went to a bar": "Va anar a un bar",
     "We support Markdown to format the text (bold, lists, headings, etc…).": "Admetem Markdown per donar format al text (negreta, llistes, encapçalaments, etc.).",
     "We were unable to find a registered user with this email address.": "No hem pogut trobar un usuari registrat amb aquest correu electrònic.",
@@ -1208,7 +1207,7 @@
     "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "Quan el factor d'autenticació en dos passos està habilitat, se us demanarà un token segur i aleatori durant l'autenticació. Podeu recuperar aquest token des del vostre telèfon de l'aplicació Google Authenticator.",
     "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "Quan l’autenticació de dos factors està habilitada, se us demanarà un testimoni aleatori i segur durant l’autenticació. Podeu recuperar aquest testimoni des de l’aplicació Authenticator del vostre telèfon.",
     "When was the loan made?": "Quan es va fer el préstec?",
-    "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "Quan definiu una relació entre dos contactes, per exemple, una relació pare-fill, la Mònica crea dues relacions, una per a cada contacte:",
+    "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "Quan definiu una relació entre dos contactes, per exemple, una relació pare-fill, la Monica crea dues relacions, una per a cada contacte:",
     "Which email address should we send the notification to?": "A quina adreça electrònica hem d’enviar la notificació?",
     "Who called?": "Qui ha trucat?",
     "Who makes the loan?": "Qui fa el préstec?",
@@ -1225,7 +1224,7 @@
     "year": "curs",
     "Years": "Anys",
     "You are here:": "Estàs aquí:",
-    "You are invited to join Monica": "Esteu convidats a unir-vos a la Mònica",
+    "You are invited to join Monica": "Esteu convidats a unir-vos a la Monica",
     "You are receiving this email because we received a password reset request for your account.": "Heu rebut aquest correu electrònic perquè s'ha solicitat el restabliment de la contrasenya per al vostre compte.",
     "you can't even use your current username or password to sign in,": "ni tan sols podeu utilitzar el vostre nom d’usuari o contrasenya actuals per iniciar la sessió,",
     "you can't import any data from your current Monica account(yet),": "no podeu importar cap dada del vostre compte actual de Monica (encara),",
@@ -1252,7 +1251,7 @@
     "You may not delete your personal team.": "No podeu suprimir el personal de l'equip.",
     "You may not leave a team that you created.": "No podeu deixar un equip que heu creat.",
     "You might need to reload the page to see the changes.": "És possible que hàgiu de tornar a carregar la pàgina per veure els canvis.",
-    "You need at least one template for contacts to be displayed. Without a template, Monica won’t know which information it should display.": "Necessites almenys una plantilla perquè es mostrin els contactes. Sense una plantilla, la Mònica no sabrà quina informació hauria de mostrar.",
+    "You need at least one template for contacts to be displayed. Without a template, Monica won’t know which information it should display.": "Necessites almenys una plantilla perquè es mostrin els contactes. Sense una plantilla, la Monica no sabrà quina informació hauria de mostrar.",
     "Your account current usage": "Ús actual del vostre compte",
     "Your account has been created": "El teu compte ha estat creat",
     "Your account is linked": "El teu compte està enllaçat",
