--- a/lang/de.json
+++ b/lang/de.json
@@ -890,7 +890,6 @@
     "Test email for Monica": "Test-E-Mail für Monica",
     "Test email sent!": "Test-E-Mail gesendet!",
     "Thanks,": "Danke,",
-    "Thanks for giving Monica a try": "Danke, dass du Monica einen Versuch gegeben hast",
     "Thanks for giving Monica a try.": "Danke, dass du Monica einen Versuch gegeben hast.",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Danke für’s Registrieren! Bevor Sie beginnen, können Sie Ihre E-Mail-Adresse bestätigen, indem Sie auf den Link klicken, den wir Ihnen gerade per E-Mail zugesandt haben. Wenn Sie die E-Mail nicht erhalten haben, senden wir Ihnen gerne eine weitere zu.",
     "The :attribute must be at least :length characters.": ":Attribute muss aus mindestens :length Zeichen bestehen.",
@@ -1166,7 +1165,7 @@
     "Verified": "Verifiziert",
     "Verify Email Address": "E-Mail-Adresse bestätigen",
     "Verify this email address": "Bestätigen Sie diese E-Mail-Adresse",
-    "Version :version — commit [:short](:url).": "Version :version – Commit [:short](:url).",
+    "Version :version — commit [:short](:url).": "Version :version — Commit [:short](:url).",
     "Via Telegram": "Per Telegramm",
     "Video call": "Videoanruf",
     "View": "Sicht",
