--- a/lang/el.json
+++ b/lang/el.json
@@ -267,7 +267,7 @@
     "colleague": "συνάδελφος",
     "Companies": "Εταιρείες",
     "Company name": "Ονομα εταιρείας",
-    "Compared to Monica:": "Σε σύγκριση με τη Μόνικα:",
+    "Compared to Monica:": "Σε σύγκριση με τη Monica:",
     "Configure how we should notify you": "Διαμορφώστε τον τρόπο με τον οποίο πρέπει να σας ειδοποιούμε",
     "Confirm": "Επιβεβαίωση",
     "Confirm Password": "Επιβεβαίωση Κωδικού",
@@ -621,7 +621,7 @@
     "miles (mi)": "μίλια (mi)",
     "Modules in this page": "Ενότητες σε αυτή τη σελίδα",
     "Monday": "Δευτέρα",
-    "Monica. All rights reserved. 2017 — :date.": "Μόνικα. Ολα τα δικαιώματα διατηρούνται. 2017 — :date.",
+    "Monica. All rights reserved. 2017 — :date.": "Monica. Ολα τα δικαιώματα διατηρούνται. 2017 — :date.",
     "Monica is open source, made by hundreds of people from all around the world.": "Η Monica είναι ανοιχτού κώδικα, φτιαγμένη από εκατοντάδες ανθρώπους από όλο τον κόσμο.",
     "Monica was made to help you document your life and your social interactions.": "Η Monica δημιουργήθηκε για να σας βοηθήσει να τεκμηριώσετε τη ζωή σας και τις κοινωνικές σας αλληλεπιδράσεις.",
     "Month": "Μήνας",
@@ -640,7 +640,7 @@
     "Nature of the call": "Φύση της κλήσης",
     "nephew\/niece": "ανιψιός ανιψιά",
     "New Password": "Νέος Κωδικός Πρόσβασης",
-    "New to Monica?": "Νέος στη Μόνικα;",
+    "New to Monica?": "Νέος στη Monica;",
     "Next": "Επόμενο",
     "Nickname": "Παρατσούκλι",
     "nickname": "παρατσούκλι",
@@ -727,7 +727,7 @@
     "Please enter your password to cancel the account": "Εισαγάγετε τον κωδικό πρόσβασής σας για να ακυρώσετε τον λογαριασμό",
     "Please enter your password to confirm you would like to log out of your other browser sessions across all of your devices.": "Παρακαλώ εισάγετε τον κωδικό πρόσβασής σας για να επιβεβαιώσετε ότι θέλετε να αποσυνδεθείτε από άλλες συνεδρίες του προγράμματος περιήγησης σε όλες τις συσκευές σας.",
     "Please indicate the contacts": "Σημειώστε τις επαφές",
-    "Please join Monica": "Παρακαλώ εγγραφείτε στη Μόνικα",
+    "Please join Monica": "Παρακαλώ εγγραφείτε στη Monica",
     "Please provide the email address of the person you would like to add to this team.": "Δώστε τη διεύθυνση ηλεκτρονικού ταχυδρομείου του ατόμου που θέλετε να προσθέσετε σε αυτήν την ομάδα.",
     "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "Διαβάστε την <link>τεκμηρίωσή μας<\/link> για να μάθετε περισσότερα σχετικά με αυτήν τη δυνατότητα και σε ποιες μεταβλητές έχετε πρόσβαση.",
     "Please select a page on the left to load modules.": "Επιλέξτε μια σελίδα στα αριστερά για να φορτώσετε ενότητες.",
@@ -887,11 +887,10 @@
     "Templates": "Πρότυπα",
     "Templates let you customize what data should be displayed on your contacts. You can define as many templates as you want, and choose which template should be used on which contact.": "Τα πρότυπα σάς επιτρέπουν να προσαρμόσετε τα δεδομένα που πρέπει να εμφανίζονται στις επαφές σας. Μπορείτε να ορίσετε όσα πρότυπα θέλετε και να επιλέξετε ποιο πρότυπο θα χρησιμοποιηθεί σε ποια επαφή.",
     "Terms of Service": "Όροι Παροχής Υπηρεσιών",
-    "Test email for Monica": "Δοκιμαστικό email για τη Μόνικα",
+    "Test email for Monica": "Δοκιμαστικό email για τη Monica",
     "Test email sent!": "Εστάλη δοκιμαστικό email!",
     "Thanks,": "Ευχαριστώ,",
-    "Thanks for giving Monica a try": "Ευχαριστούμε που δοκιμάσατε τη Μόνικα",
-    "Thanks for giving Monica a try.": "Ευχαριστούμε που δοκιμάσατε τη Μόνικα.",
+    "Thanks for giving Monica a try.": "Ευχαριστούμε που δοκιμάσατε τη Monica.",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Ευχαριστούμε για την εγγραφή! Πριν ξεκινήσετε, θα μπορούσατε να επαληθεύσετε τη διεύθυνση email σας κάνοντας κλικ στον σύνδεσμο που μόλις σας στείλαμε email; Εάν δεν λάβατε το email, θα σας στείλουμε ευχαρίστως άλλο.",
     "The :attribute must be at least :length characters.": "Το :attribute θα πρέπει να είναι τουλάχιστον :length χαρακτήρων.",
     "The :attribute must be at least :length characters and contain at least one number.": "Το :attribute θα πρέπει να είναι τουλάχιστον :length χαρακτήρων και να περιέχει έναν αριθμό.",
@@ -1176,7 +1175,7 @@
     "View history": "Προβολή ιστορικού",
     "View log": "Προβολή αρχείου καταγραφής",
     "View on map": "Προβολή στο χάρτη",
-    "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Περιμένετε μερικά δευτερόλεπτα για να σας αναγνωρίσει η Μόνικα (η εφαρμογή). Θα σας στείλουμε μια ψεύτικη ειδοποίηση για να δούμε αν λειτουργεί.",
+    "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Περιμένετε μερικά δευτερόλεπτα για να σας αναγνωρίσει η Monica (η εφαρμογή). Θα σας στείλουμε μια ψεύτικη ειδοποίηση για να δούμε αν λειτουργεί.",
     "Waiting for key…": "Αναμονή για το κλειδί…",
     "Walked": "Περπάτησε",
     "Wallpaper": "Ταπετσαρία",
@@ -1192,7 +1191,7 @@
     "Wednesday": "Τετάρτη",
     "We hope you'll like it.": "Ελπίζουμε να σας αρέσει.",
     "We hope you will like what we’ve done.": "Ελπίζουμε να σας αρέσει αυτό που κάναμε.",
-    "Welcome to Monica.": "Καλώς ήρθατε στη Μόνικα.",
+    "Welcome to Monica.": "Καλώς ήρθατε στη Monica.",
     "Went to a bar": "Πήγε σε ένα μπαρ",
     "We support Markdown to format the text (bold, lists, headings, etc…).": "Υποστηρίζουμε το Markdown για τη μορφοποίηση του κειμένου (έντονα γράμματα, λίστες, επικεφαλίδες, κ.λπ.).",
     "We were unable to find a registered user with this email address.": "Ήταν αδύνατο να βρούμε έναν εγγεγραμμένο χρήστη, με αυτή τη διεύθυνση ηλεκτρονικού ταχυδρομείου.",
