--- a/lang/es.json
+++ b/lang/es.json
@@ -267,7 +267,7 @@
     "colleague": "colega",
     "Companies": "Compañías",
     "Company name": "Nombre de empresa",
-    "Compared to Monica:": "Comparado con Mónica:",
+    "Compared to Monica:": "Comparado con Monica:",
     "Configure how we should notify you": "Configura cómo debemos avisarte",
     "Confirm": "Confirmar",
     "Confirm Password": "Confirmar contraseña",
@@ -307,7 +307,7 @@
     "Create a reminder": "Crear un recordatorio",
     "Create a slice of life": "Crea una porción de vida",
     "Create at least one page to display contact’s data.": "Cree al menos una página para mostrar los datos del contacto.",
-    "Create at least one template to use Monica.": "Crea al menos una plantilla para usar Mónica.",
+    "Create at least one template to use Monica.": "Crea al menos una plantilla para usar Monica.",
     "Create a user": "Crear un usuario",
     "Create a vault": "crear una bóveda",
     "Created.": "Creado.",
@@ -621,9 +621,9 @@
     "miles (mi)": "millas (mi)",
     "Modules in this page": "Módulos en esta página",
     "Monday": "Lunes",
-    "Monica. All rights reserved. 2017 — :date.": "Mónica. Reservados todos los derechos. 2017: :date.",
+    "Monica. All rights reserved. 2017 — :date.": "Monica. Reservados todos los derechos. 2017: :date.",
     "Monica is open source, made by hundreds of people from all around the world.": "Monica es de código abierto, creada por cientos de personas de todo el mundo.",
-    "Monica was made to help you document your life and your social interactions.": "Mónica fue creada para ayudarte a documentar tu vida y tus interacciones sociales.",
+    "Monica was made to help you document your life and your social interactions.": "Monica fue creada para ayudarte a documentar tu vida y tus interacciones sociales.",
     "Month": "Mes",
     "month": "mes",
     "Mood in the year": "Estado de ánimo en el año.",
@@ -640,7 +640,7 @@
     "Nature of the call": "Naturaleza de la llamada",
     "nephew\/niece": "sobrino sobrina",
     "New Password": "Nueva Contraseña",
-    "New to Monica?": "¿Nuevo en Mónica?",
+    "New to Monica?": "¿Nuevo en Monica?",
     "Next": "Próximo",
     "Nickname": "Apodo",
     "nickname": "apodo",
@@ -715,7 +715,7 @@
     "Played soccer": "Jugó fútbol",
     "Played tennis": "Jugó tenis",
     "Please choose a template for this new post": "Por favor elija una plantilla para esta nueva publicación",
-    "Please choose one template below to tell Monica how this contact should be displayed. Templates let you define which data should be displayed on the contact page.": "Elija una plantilla a continuación para decirle a Mónica cómo se debe mostrar este contacto. Las plantillas le permiten definir qué datos deben mostrarse en la página de contacto.",
+    "Please choose one template below to tell Monica how this contact should be displayed. Templates let you define which data should be displayed on the contact page.": "Elija una plantilla a continuación para decirle a Monica cómo se debe mostrar este contacto. Las plantillas le permiten definir qué datos deben mostrarse en la página de contacto.",
     "Please click the button below to verify your email address.": "Por favor, haga clic en el botón de abajo para verificar su dirección de correo electrónico.",
     "Please complete this form to finalize your account.": "Por favor complete este formulario para finalizar su cuenta.",
     "Please confirm access to your account by entering one of your emergency recovery codes.": "Por favor confirme el acceso a su cuenta ingresando uno de sus códigos de recuperación de emergencia.",
@@ -727,7 +727,7 @@
     "Please enter your password to cancel the account": "Por favor ingrese su contraseña para cancelar la cuenta",
     "Please enter your password to confirm you would like to log out of your other browser sessions across all of your devices.": "Por favor ingrese su contraseña para confirmar que desea cerrar las demás sesiones de otros navegadores en todos sus dispositivos.",
     "Please indicate the contacts": "Por favor indique los contactos",
-    "Please join Monica": "Por favor únete a Mónica",
+    "Please join Monica": "Por favor únete a Monica",
     "Please provide the email address of the person you would like to add to this team.": "Por favor proporcione la dirección de correo electrónico de la persona que le gustaría agregar a este equipo.",
     "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "Lea nuestra <link>documentación<\/link> para saber más sobre esta función y a qué variables tiene acceso.",
     "Please select a page on the left to load modules.": "Seleccione una página a la izquierda para cargar módulos.",
@@ -887,11 +887,10 @@
     "Templates": "Plantillas",
     "Templates let you customize what data should be displayed on your contacts. You can define as many templates as you want, and choose which template should be used on which contact.": "Las plantillas le permiten personalizar qué datos deben mostrarse en sus contactos. Puede definir tantas plantillas como desee y elegir qué plantilla se debe utilizar en cada contacto.",
     "Terms of Service": "Términos del servicio",
-    "Test email for Monica": "Correo electrónico de prueba para Mónica",
+    "Test email for Monica": "Correo electrónico de prueba para Monica",
     "Test email sent!": "¡Correo electrónico de prueba enviado!",
     "Thanks,": "Gracias,",
-    "Thanks for giving Monica a try": "Gracias por darle una oportunidad a Mónica.",
-    "Thanks for giving Monica a try.": "Gracias por darle una oportunidad a Mónica.",
+    "Thanks for giving Monica a try.": "Gracias por darle una oportunidad a Monica.",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Gracias por registrarte! Antes de comenzar, ¿podría verificar su dirección de correo electrónico haciendo clic en el enlace que le acabamos de enviar por correo electrónico? Si no recibió el correo electrónico, con gusto le enviaremos otro.",
     "The :attribute must be at least :length characters.": "La :attribute debe tener al menos :length caracteres.",
     "The :attribute must be at least :length characters and contain at least one number.": "La :attribute debe tener al menos :length caracteres y contener por lo menos un número.",
@@ -961,7 +960,7 @@
     "The important dates in the next 12 months": "Las fechas importantes de los próximos 12 meses",
     "The job information has been saved": "La información del trabajo ha sido guardada.",
     "The journal lets you document your life with your own words.": "El diario te permite documentar tu vida con tus propias palabras.",
-    "The keys to manage uploads have not been set in this Monica instance.": "Las claves para administrar las cargas no se han configurado en esta instancia de Mónica.",
+    "The keys to manage uploads have not been set in this Monica instance.": "Las claves para administrar las cargas no se han configurado en esta instancia de Monica.",
     "The label has been added": "La etiqueta ha sido agregada.",
     "The label has been created": "La etiqueta ha sido creada.",
     "The label has been deleted": "La etiqueta ha sido eliminada.",
@@ -1073,7 +1072,7 @@
     "they\/them": "ellos ellos",
     "This address is not active anymore": "Esta dirección ya no está activa",
     "This device": "Este dispositivo",
-    "This email is a test email to check if Monica can send an email to this email address.": "Este correo electrónico es un correo electrónico de prueba para comprobar si Mónica puede enviar un correo electrónico a esta dirección de correo electrónico.",
+    "This email is a test email to check if Monica can send an email to this email address.": "Este correo electrónico es un correo electrónico de prueba para comprobar si Monica puede enviar un correo electrónico a esta dirección de correo electrónico.",
     "This is a secure area of the application. Please confirm your password before continuing.": "Esta es un área segura de la aplicación. Confirme su contraseña antes de continuar.",
     "This is a test email": "Este es un correo electrónico de prueba.",
     "This is a test notification for :name": "Esta es una notificación de prueba para :name",
@@ -1176,7 +1175,7 @@
     "View history": "Ver historial",
     "View log": "Ver registro",
     "View on map": "Ver en el mapa",
-    "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Espera unos segundos a que Mónica (la aplicación) te reconozca. Le enviaremos una notificación falsa para ver si funciona.",
+    "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Espera unos segundos a que Monica (la aplicación) te reconozca. Le enviaremos una notificación falsa para ver si funciona.",
     "Waiting for key…": "Esperando la llave...",
     "Walked": "Caminó",
     "Wallpaper": "Fondo de pantalla",
@@ -1192,7 +1191,7 @@
     "Wednesday": "Miércoles",
     "We hope you'll like it.": "Esperamos que te guste.",
     "We hope you will like what we’ve done.": "Esperamos que te guste lo que hemos hecho.",
-    "Welcome to Monica.": "Bienvenido a Mónica.",
+    "Welcome to Monica.": "Bienvenido a Monica.",
     "Went to a bar": "Fui a un bar",
     "We support Markdown to format the text (bold, lists, headings, etc…).": "Admitimos Markdown para formatear el texto (negrita, listas, encabezados, etc…).",
     "We were unable to find a registered user with this email address.": "No pudimos encontrar un usuario registrado con esta dirección de correo electrónico.",
@@ -1208,7 +1207,7 @@
     "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "Cuando la autenticación de dos factores esté habilitada, le pediremos un token aleatorio seguro durante la autenticación. Puede recuperar este token desde la aplicación Google Authenticator de su teléfono.",
     "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "Cuando la autenticación de dos factores está habilitada, se le solicitará un token aleatorio seguro durante la autenticación. Puede recuperar este token desde la aplicación Authenticator de su teléfono.",
     "When was the loan made?": "¿Cuándo se hizo el préstamo?",
-    "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "Cuando defines una relación entre dos contactos, por ejemplo una relación padre-hijo, Mónica crea dos relaciones, una para cada contacto:",
+    "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "Cuando defines una relación entre dos contactos, por ejemplo una relación padre-hijo, Monica crea dos relaciones, una para cada contacto:",
     "Which email address should we send the notification to?": "¿A qué dirección de correo electrónico debemos enviar la notificación?",
     "Who called?": "¿Quien llamó?",
     "Who makes the loan?": "¿Quién hace el préstamo?",
@@ -1225,15 +1224,15 @@
     "year": "año",
     "Years": "Años",
     "You are here:": "Usted está aquí:",
-    "You are invited to join Monica": "Estás invitado a unirte a Mónica.",
+    "You are invited to join Monica": "Estás invitado a unirte a Monica.",
     "You are receiving this email because we received a password reset request for your account.": "Ha recibido este mensaje porque se solicitó un restablecimiento de contraseña para su cuenta.",
     "you can't even use your current username or password to sign in,": "ni siquiera puedes usar tu nombre de usuario o contraseña actuales para iniciar sesión,",
-    "you can't import any data from your current Monica account(yet),": "no puedes importar ningún dato de tu cuenta actual de Mónica (todavía),",
+    "you can't import any data from your current Monica account(yet),": "no puedes importar ningún dato de tu cuenta actual de Monica (todavía),",
     "You can add job information to your contacts and manage the companies here in this tab.": "Puede agregar información laboral a sus contactos y administrar las empresas aquí en esta pestaña.",
     "You can add more account to log in to our service with one click.": "Puede agregar más cuentas para iniciar sesión en nuestro servicio con un solo clic.",
     "You can be notified through different channels: emails, a Telegram message, on Facebook. You decide.": "Puedes recibir notificaciones a través de diferentes canales: correos electrónicos, un mensaje de Telegram, en Facebook. Tú decides.",
     "You can change that at any time.": "Puedes cambiar eso en cualquier momento.",
-    "You can choose how you want Monica to display dates in the application.": "Puedes elegir cómo quieres que Mónica muestre las fechas en la aplicación.",
+    "You can choose how you want Monica to display dates in the application.": "Puedes elegir cómo quieres que Monica muestre las fechas en la aplicación.",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "Puede elegir qué monedas deben habilitarse en su cuenta y cuáles no.",
     "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Puede personalizar cómo se deben mostrar los contactos según su propio gusto\/cultura. Quizás quieras usar James Bond en lugar de Bond James. Aquí puedes definirlo a tu antojo.",
     "You can customize the criteria that let you track your mood.": "Puede personalizar los criterios que le permiten realizar un seguimiento de su estado de ánimo.",
@@ -1252,7 +1251,7 @@
     "You may not delete your personal team.": "No se puede borrar su equipo personal.",
     "You may not leave a team that you created.": "No se puede abandonar un equipo que usted creó.",
     "You might need to reload the page to see the changes.": "Es posible que tengas que recargar la página para ver los cambios.",
-    "You need at least one template for contacts to be displayed. Without a template, Monica won’t know which information it should display.": "Necesita al menos una plantilla para que se muestren los contactos. Sin una plantilla, Mónica no sabrá qué información debe mostrar.",
+    "You need at least one template for contacts to be displayed. Without a template, Monica won’t know which information it should display.": "Necesita al menos una plantilla para que se muestren los contactos. Sin una plantilla, Monica no sabrá qué información debe mostrar.",
     "Your account current usage": "Uso actual de su cuenta",
     "Your account has been created": "Tu cuenta ha sido creada",
     "Your account is linked": "Tu cuenta está vinculada",
