--- a/lang/he.json
+++ b/lang/he.json
@@ -267,7 +267,7 @@
     "colleague": "עמית",
     "Companies": "חברות",
     "Company name": "שם החברה",
-    "Compared to Monica:": "בהשוואה למוניקה:",
+    "Compared to Monica:": "בהשוואה ל-Monica:",
     "Configure how we should notify you": "הגדר כיצד עלינו להודיע לך",
     "Confirm": "אישור",
     "Confirm Password": "אימות סיסמה",
@@ -307,7 +307,7 @@
     "Create a reminder": "צור תזכורת",
     "Create a slice of life": "צור פרוסת חיים",
     "Create at least one page to display contact’s data.": "צור עמוד אחד לפחות כדי להציג את הנתונים של איש הקשר.",
-    "Create at least one template to use Monica.": "צור תבנית אחת לפחות כדי להשתמש במוניקה.",
+    "Create at least one template to use Monica.": "צור תבנית אחת לפחות כדי להשתמש Monica.",
     "Create a user": "צור משתמש",
     "Create a vault": "צור כספת",
     "Created.": "נוצר.",
@@ -621,9 +621,9 @@
     "miles (mi)": "מיילים (מייל)",
     "Modules in this page": "מודולים בעמוד זה",
     "Monday": "יוֹם שֵׁנִי",
-    "Monica. All rights reserved. 2017 — :date.": "מוניקה. כל הזכויות שמורות. 2017 - :date.",
-    "Monica is open source, made by hundreds of people from all around the world.": "מוניקה היא קוד פתוח, שנוצרה על ידי מאות אנשים מכל רחבי העולם.",
-    "Monica was made to help you document your life and your social interactions.": "מוניקה נוצרה כדי לעזור לך לתעד את חייך ואת האינטראקציות החברתיות שלך.",
+    "Monica. All rights reserved. 2017 — :date.": "Monica. כל הזכויות שמורות. 2017 — :date.",
+    "Monica is open source, made by hundreds of people from all around the world.": "Monica היא קוד פתוח, שנוצרה על ידי מאות אנשים מכל רחבי העולם.",
+    "Monica was made to help you document your life and your social interactions.": "Monica נוצרה כדי לעזור לך לתעד את חייך ואת האינטראקציות החברתיות שלך.",
     "Month": "חוֹדֶשׁ",
     "month": "חוֹדֶשׁ",
     "Mood in the year": "מצב רוח בשנה",
@@ -640,7 +640,7 @@
     "Nature of the call": "אופי השיחה",
     "nephew\/niece": "אחיין אחיינית",
     "New Password": "סיסמה חדשה",
-    "New to Monica?": "חדש במוניקה?",
+    "New to Monica?": "חדש Monica?",
     "Next": "הַבָּא",
     "Nickname": "כינוי",
     "nickname": "כינוי",
@@ -715,7 +715,7 @@
     "Played soccer": "שיחקתי כדורגל",
     "Played tennis": "שיחק טניס",
     "Please choose a template for this new post": "אנא בחר תבנית עבור הפוסט החדש הזה",
-    "Please choose one template below to tell Monica how this contact should be displayed. Templates let you define which data should be displayed on the contact page.": "אנא בחר תבנית אחת למטה כדי לספר למוניקה כיצד יש להציג איש קשר זה. תבניות מאפשרות לך להגדיר אילו נתונים יש להציג בדף יצירת הקשר.",
+    "Please choose one template below to tell Monica how this contact should be displayed. Templates let you define which data should be displayed on the contact page.": "אנא בחר תבנית אחת למטה כדי לספר Monica כיצד יש להציג איש קשר זה. תבניות מאפשרות לך להגדיר אילו נתונים יש להציג בדף יצירת הקשר.",
     "Please click the button below to verify your email address.": "אנא לחצו על הכפתור מטה לאימות הדואר האלקטרוני שלכם.",
     "Please complete this form to finalize your account.": "אנא מלא טופס זה כדי לסיים את חשבונך.",
     "Please confirm access to your account by entering one of your emergency recovery codes.": "אנא אשר גישה לחשבון שלך על ידי הזנת אחד קודי שחזור חירום שלך.",
@@ -727,7 +727,7 @@
     "Please enter your password to cancel the account": "אנא הזן את הסיסמה שלך כדי לבטל את החשבון",
     "Please enter your password to confirm you would like to log out of your other browser sessions across all of your devices.": "הזן את הסיסמה שלך כדי לוודא שברצונך להתנתק מההפעלות האחרות בדפדפן שלך בכל המכשירים שלך.",
     "Please indicate the contacts": "נא לציין את אנשי הקשר",
-    "Please join Monica": "נא להצטרף למוניקה",
+    "Please join Monica": "נא להצטרף Monica",
     "Please provide the email address of the person you would like to add to this team.": "אנא ספק את כתובת הדוא \" ל של האדם שברצונך להוסיף לצוות זה.",
     "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "אנא קרא את ה<link>תיעוד<\/link> שלנו כדי לדעת יותר על תכונה זו, ולאילו משתנים יש לך גישה.",
     "Please select a page on the left to load modules.": "אנא בחר עמוד בצד שמאל כדי לטעון מודולים.",
@@ -887,11 +887,10 @@
     "Templates": "תבניות",
     "Templates let you customize what data should be displayed on your contacts. You can define as many templates as you want, and choose which template should be used on which contact.": "תבניות מאפשרות לך להתאים אישית אילו נתונים אמורים להיות מוצגים באנשי הקשר שלך. אתה יכול להגדיר כמה תבניות שתרצה, ולבחור באיזו תבנית יש להשתמש באיזה איש קשר.",
     "Terms of Service": "תנאי שימוש",
-    "Test email for Monica": "דוא\"ל בדיקה עבור מוניקה",
+    "Test email for Monica": "דוא\"ל בדיקה עבור Monica",
     "Test email sent!": "מייל בדיקה נשלח!",
     "Thanks,": "תודה,",
-    "Thanks for giving Monica a try": "תודה שניסית את מוניקה",
-    "Thanks for giving Monica a try.": "תודה שניסית את מוניקה.",
+    "Thanks for giving Monica a try.": "תודה שניסית את Monica.",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "תודה על ההרשמה! לפני שתתחיל, האם תוכל לאמת את כתובת הדוא\"ל שלך על ידי לחיצה על הקישור שזה עתה שלחנו לך בדוא\"ל? אם לא קיבלת את המייל, נשלח לך בשמחה דוא\"ל נוסף.",
     "The :attribute must be at least :length characters.": ":Attribute חייב להיות לפחות :length תווים.",
     "The :attribute must be at least :length characters and contain at least one number.": ":Attribute חייב להיות לפחות :length תווים מכילים לפחות מספר אחד.",
@@ -1073,7 +1072,7 @@
     "they\/them": "הם\/הם",
     "This address is not active anymore": "כתובת זו אינה פעילה יותר",
     "This device": "התקן זה",
-    "This email is a test email to check if Monica can send an email to this email address.": "דוא\"ל זה הוא דוא\"ל בדיקה כדי לבדוק אם מוניקה יכולה לשלוח דוא\"ל לכתובת דוא\"ל זו.",
+    "This email is a test email to check if Monica can send an email to this email address.": "דוא\"ל זה הוא דוא\"ל בדיקה כדי לבדוק אם Monica יכולה לשלוח דוא\"ל לכתובת דוא\"ל זו.",
     "This is a secure area of the application. Please confirm your password before continuing.": "זהו אזור מאובטח של היישום. אנא אשר את הסיסמה שלך לפני שתמשיך.",
     "This is a test email": "זהו מייל לבדיקה",
     "This is a test notification for :name": "זוהי הודעת בדיקה עבור :name",
@@ -1176,7 +1175,7 @@
     "View history": "צפה בהיסטוריה",
     "View log": "צפה בלוג",
     "View on map": "צפה במפה",
-    "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "המתן מספר שניות עד שמוניקה (האפליקציה) תזהה אותך. אנו נשלח לך הודעה מזויפת כדי לראות אם זה עובד.",
+    "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "המתן מספר שניות עד שMonica (האפליקציה) תזהה אותך. אנו נשלח לך הודעה מזויפת כדי לראות אם זה עובד.",
     "Waiting for key…": "מחכה למפתח...",
     "Walked": "הלך",
     "Wallpaper": "טפט",
@@ -1192,7 +1191,7 @@
     "Wednesday": "יום רביעי",
     "We hope you'll like it.": "אנו מקווים שתאהב את זה.",
     "We hope you will like what we’ve done.": "אנו מקווים שתאהבו את מה שעשינו.",
-    "Welcome to Monica.": "ברוכים הבאים למוניקה.",
+    "Welcome to Monica.": "ברוכים הבאים Monica.",
     "Went to a bar": "הלך לבר",
     "We support Markdown to format the text (bold, lists, headings, etc…).": "אנו תומכים ב-Markdown לעיצוב הטקסט (מודגש, רשימות, כותרות וכו’...).",
     "We were unable to find a registered user with this email address.": "לא הצלחנו למצוא משתמש רשום עם כתובת דוא \" ל זו.",
@@ -1208,7 +1207,7 @@
     "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "כאשר אימות שני גורמים מופעל, תתבקש לקבל אסימון מאובטח ואקראי במהלך האימות. אתה יכול לאחזר אסימון זה מיישום Google Authenticator של הטלפון שלך.",
     "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "כאשר אימות שני גורמים מופעל, תתבקש להזין אסימון מאובטח ואקראי במהלך האימות. אתה יכול לאחזר את האסימון הזה מאפליקציית המאמת של הטלפון שלך.",
     "When was the loan made?": "מתי בוצעה ההלוואה?",
-    "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "כאשר אתה מגדיר מערכת יחסים בין שני אנשי קשר, למשל מערכת יחסים של אב ובן, מוניקה יוצרת שני קשרים, אחד לכל איש קשר:",
+    "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "כאשר אתה מגדיר מערכת יחסים בין שני אנשי קשר, למשל מערכת יחסים של אב ובן, Monica יוצרת שני קשרים, אחד לכל איש קשר:",
     "Which email address should we send the notification to?": "לאיזו כתובת אימייל עלינו לשלוח את ההודעה?",
     "Who called?": "מי התקשר?",
     "Who makes the loan?": "מי נותן את ההלוואה?",
@@ -1225,15 +1224,15 @@
     "year": "שָׁנָה",
     "Years": "שנים",
     "You are here:": "אתה כאן:",
-    "You are invited to join Monica": "אתם מוזמנים להצטרף למוניקה",
+    "You are invited to join Monica": "אתם מוזמנים להצטרף Monica",
     "You are receiving this email because we received a password reset request for your account.": "קיבלתם את המייל הזה מכיוון שקיבלנו בקשה לאיפוס הסיסמה עבור החשבון שלכם.",
     "you can't even use your current username or password to sign in,": "אתה אפילו לא יכול להשתמש בשם המשתמש או הסיסמה הנוכחית שלך כדי להיכנס,",
-    "you can't import any data from your current Monica account(yet),": "אינך יכול לייבא נתונים מחשבון מוניקה הנוכחי שלך (עדיין),",
+    "you can't import any data from your current Monica account(yet),": "אינך יכול לייבא נתונים מחשבון Monica הנוכחי שלך (עדיין),",
     "You can add job information to your contacts and manage the companies here in this tab.": "אתה יכול להוסיף פרטי עבודה לאנשי הקשר שלך ולנהל את החברות כאן בלשונית זו.",
     "You can add more account to log in to our service with one click.": "אתה יכול להוסיף עוד חשבונות כדי להיכנס לשירות שלנו בלחיצה אחת.",
     "You can be notified through different channels: emails, a Telegram message, on Facebook. You decide.": "ניתן לקבל הודעה בערוצים שונים: מיילים, הודעת טלגרם, בפייסבוק. אתה תחליט.",
     "You can change that at any time.": "אתה יכול לשנות את זה בכל עת.",
-    "You can choose how you want Monica to display dates in the application.": "אתה יכול לבחור איך אתה רוצה שמוניקה תציג תאריכים באפליקציה.",
+    "You can choose how you want Monica to display dates in the application.": "אתה יכול לבחור איך אתה רוצה שMonica תציג תאריכים באפליקציה.",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "אתה יכול לבחור אילו מטבעות יש להפעיל בחשבונך, ואיזה לא.",
     "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "אתה יכול להתאים אישית את אופן הצגת אנשי הקשר לפי הטעם\/תרבות שלך. אולי תרצה להשתמש בג’יימס בונד במקום בונד ג’יימס. כאן, אתה יכול להגדיר את זה כרצונך.",
     "You can customize the criteria that let you track your mood.": "אתה יכול להתאים אישית את הקריטריונים שיאפשרו לך לעקוב אחר מצב הרוח שלך.",
@@ -1252,7 +1251,7 @@
     "You may not delete your personal team.": "אסור לך למחוק את הצוות האישי שלך.",
     "You may not leave a team that you created.": "אתה לא יכול לעזוב את צוות שיצרת.",
     "You might need to reload the page to see the changes.": "ייתכן שיהיה עליך לטעון מחדש את הדף כדי לראות את השינויים.",
-    "You need at least one template for contacts to be displayed. Without a template, Monica won’t know which information it should display.": "אתה צריך לפחות תבנית אחת כדי שאנשי הקשר יוצגו. ללא תבנית, מוניקה לא תדע איזה מידע היא צריכה להציג.",
+    "You need at least one template for contacts to be displayed. Without a template, Monica won’t know which information it should display.": "אתה צריך לפחות תבנית אחת כדי שאנשי הקשר יוצגו. ללא תבנית, Monica לא תדע איזה מידע היא צריכה להציג.",
     "Your account current usage": "השימוש הנוכחי בחשבונך",
     "Your account has been created": "החשבון שלך נוצר",
     "Your account is linked": "החשבון שלך מקושר",
