--- a/lang/ja.json
+++ b/lang/ja.json
@@ -267,7 +267,7 @@
     "colleague": "同僚",
     "Companies": "企業",
     "Company name": "会社名",
-    "Compared to Monica:": "モニカと比較すると、",
+    "Compared to Monica:": "Monicaと比較すると、",
     "Configure how we should notify you": "通知方法を設定する",
     "Confirm": "確認",
     "Confirm Password": "パスワード（確認用）",
@@ -621,7 +621,7 @@
     "miles (mi)": "マイル (mi)",
     "Modules in this page": "このページのモジュール",
     "Monday": "月曜日",
-    "Monica. All rights reserved. 2017 — :date.": "モニカ。無断転載を禁じます。 2017 — :date。",
+    "Monica. All rights reserved. 2017 — :date.": "Monica。無断転載を禁じます。 2017 — :date。",
     "Monica is open source, made by hundreds of people from all around the world.": "Monica はオープンソースであり、世界中の何百人もの人々によって作成されています。",
     "Monica was made to help you document your life and your social interactions.": "Monica は、あなたの人生と社会的交流を記録するのに役立つように作られました。",
     "Month": "月",
@@ -640,7 +640,7 @@
     "Nature of the call": "通話の性質",
     "nephew\/niece": "甥\/姪",
     "New Password": "新しいパスワード",
-    "New to Monica?": "モニカは初めてですか?",
+    "New to Monica?": "Monica は初めてですか?",
     "Next": "次",
     "Nickname": "ニックネーム",
     "nickname": "ニックネーム",
@@ -727,7 +727,7 @@
     "Please enter your password to cancel the account": "アカウントをキャンセルするにはパスワードを入力してください",
     "Please enter your password to confirm you would like to log out of your other browser sessions across all of your devices.": "全ての端末からログアウトします。よろしければパスワードを入力してください。",
     "Please indicate the contacts": "連絡先を明記してください",
-    "Please join Monica": "モニカさんも参加してください",
+    "Please join Monica": "Monicaさんも参加してください",
     "Please provide the email address of the person you would like to add to this team.": "このチームに追加したい人のメールアドレスを入力してください。",
     "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "この機能とアクセスできる変数の詳細については、<link>ドキュメント<\/link>をお読みください。",
     "Please select a page on the left to load modules.": "左側のページを選択してモジュールをロードしてください。",
@@ -887,11 +887,10 @@
     "Templates": "テンプレート",
     "Templates let you customize what data should be displayed on your contacts. You can define as many templates as you want, and choose which template should be used on which contact.": "テンプレートを使用すると、連絡先に表示するデータをカスタマイズできます。必要な数のテンプレートを定義し、どの連絡先にどのテンプレートを使用するかを選択できます。",
     "Terms of Service": "利用規約",
-    "Test email for Monica": "モニカのテストメール",
+    "Test email for Monica": "Monicaのテストメール",
     "Test email sent!": "テストメールを送信しました!",
     "Thanks,": "ありがとう、",
-    "Thanks for giving Monica a try": "モニカを試してくれてありがとう",
-    "Thanks for giving Monica a try.": "モニカを試してくれてありがとう。",
+    "Thanks for giving Monica a try.": "Monicaを試してくれてありがとう。",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "ご登録いただきありがとうございます!始める前に、先ほどメールでお送りしたリンクをクリックして、メール アドレスを確認していただけますか?メールが届かない場合は、喜んで別のメールをお送りいたします。",
     "The :attribute must be at least :length characters.": ":Attributeは:length文字以上でなければいけません。",
     "The :attribute must be at least :length characters and contain at least one number.": ":Attributeは:length文字以上で、数字を１文字以上含めなければいけません。",
@@ -1192,7 +1191,7 @@
     "Wednesday": "水曜日",
     "We hope you'll like it.": "気に入っていただけると幸いです。",
     "We hope you will like what we’ve done.": "私たちの取り組みを気に入っていただけると幸いです。",
-    "Welcome to Monica.": "モニカへようこそ。",
+    "Welcome to Monica.": "Monicaへようこそ。",
     "Went to a bar": "バーに行きました",
     "We support Markdown to format the text (bold, lists, headings, etc…).": "テキスト (太字、リスト、見出しなど) をフォーマットするための Markdown をサポートしています。",
     "We were unable to find a registered user with this email address.": "このメールアドレスと紐づくユーザーは見つかりませんでした。",
@@ -1225,7 +1224,7 @@
     "year": "年",
     "Years": "年",
     "You are here:": "あなたはここにいる：",
-    "You are invited to join Monica": "モニカに招待されています",
+    "You are invited to join Monica": "Monicaに招待されています",
     "You are receiving this email because we received a password reset request for your account.": "パスワード再設定のリクエストを受け付けました。",
     "you can't even use your current username or password to sign in,": "現在のユーザー名やパスワードを使用してサインインすることもできません。",
     "you can't import any data from your current Monica account(yet),": "現在の Monica アカウントからは (まだ) データをインポートできません。",
