--- a/lang/pl.json
+++ b/lang/pl.json
@@ -36,7 +36,7 @@
     ":file in :class at line :line": ":file w :class na linii :line",
     ":Name called": ":Name zadzwonił",
     ":Name called, but I didn’t answer": ":Name dzwonił, ale nie odebrałem",
-    ":UserName invites you to join Monica, an open source personal CRM, designed to help you document your relationships.": ":UserName zaprasza Cię do Moniki, osobistego CRM typu open source, zaprojektowanego, aby pomóc Ci dokumentować Twoje relacje.",
+    ":UserName invites you to join Monica, an open source personal CRM, designed to help you document your relationships.": ":UserName zaprasza Cię do Monica, osobistego CRM typu open source, zaprojektowanego, aby pomóc Ci dokumentować Twoje relacje.",
     "Accept Invitation": "Przyjmij zaproszenie",
     "Accept invitation and create your account": "Zaakceptuj zaproszenie i utwórz konto",
     "Account and security": "Konto i bezpieczeństwo",
@@ -267,7 +267,7 @@
     "colleague": "kolega z pracy",
     "Companies": "Firmy",
     "Company name": "Nazwa firmy",
-    "Compared to Monica:": "W porównaniu do Moniki:",
+    "Compared to Monica:": "W porównaniu do Monica:",
     "Configure how we should notify you": "Skonfiguruj sposób, w jaki mamy Cię powiadamiać",
     "Confirm": "Potwierdź",
     "Confirm Password": "Potwierdź Hasło",
@@ -307,7 +307,7 @@
     "Create a reminder": "Utwórz przypomnienie",
     "Create a slice of life": "Stwórz kawałek życia",
     "Create at least one page to display contact’s data.": "Utwórz przynajmniej jedną stronę, na której będą wyświetlane dane kontaktu.",
-    "Create at least one template to use Monica.": "Utwórz co najmniej jeden szablon, aby móc korzystać z Moniki.",
+    "Create at least one template to use Monica.": "Utwórz co najmniej jeden szablon, aby móc korzystać z Monica.",
     "Create a user": "Utwórz użytkownika",
     "Create a vault": "Utwórz skarbiec",
     "Created.": "Utworzone.",
@@ -621,7 +621,7 @@
     "miles (mi)": "mile (mi)",
     "Modules in this page": "Moduły na tej stronie",
     "Monday": "Poniedziałek",
-    "Monica. All rights reserved. 2017 — :date.": "Monika. Wszelkie prawa zastrzeżone. 2017 — :date.",
+    "Monica. All rights reserved. 2017 — :date.": "Monica. Wszelkie prawa zastrzeżone. 2017 — :date.",
     "Monica is open source, made by hundreds of people from all around the world.": "Monica jest oprogramowaniem typu open source, tworzonym przez setki ludzi z całego świata.",
     "Monica was made to help you document your life and your social interactions.": "Monica została stworzona, aby pomóc Ci dokumentować Twoje życie i interakcje społeczne.",
     "Month": "Miesiąc",
@@ -640,7 +640,7 @@
     "Nature of the call": "Charakter połączenia",
     "nephew\/niece": "siostrzeniec siostrzenica",
     "New Password": "Nowe Hasło",
-    "New to Monica?": "Jesteś nowy w Monice?",
+    "New to Monica?": "Jesteś nowy w Monica?",
     "Next": "Następny",
     "Nickname": "Przezwisko",
     "nickname": "przezwisko",
@@ -715,7 +715,7 @@
     "Played soccer": "Grał w piłkę nożną",
     "Played tennis": "Grałem w tenisa",
     "Please choose a template for this new post": "Wybierz szablon dla tego nowego wpisu",
-    "Please choose one template below to tell Monica how this contact should be displayed. Templates let you define which data should be displayed on the contact page.": "Wybierz jeden szablon poniżej, aby poinformować Monikę, jak ten kontakt powinien być wyświetlany. Szablony pozwalają zdefiniować, jakie dane mają być wyświetlane na stronie kontaktowej.",
+    "Please choose one template below to tell Monica how this contact should be displayed. Templates let you define which data should be displayed on the contact page.": "Wybierz jeden szablon poniżej, aby poinformować Monica, jak ten kontakt powinien być wyświetlany. Szablony pozwalają zdefiniować, jakie dane mają być wyświetlane na stronie kontaktowej.",
     "Please click the button below to verify your email address.": "Kliknij poniższy przycisk aby zweryfikować swój adres e-mail.",
     "Please complete this form to finalize your account.": "Wypełnij ten formularz, aby sfinalizować utworzenie konta.",
     "Please confirm access to your account by entering one of your emergency recovery codes.": "Potwierdź dostęp do swojego konta, wprowadzając jeden ze swoich awaryjnych kodów odzyskiwania.",
@@ -727,7 +727,7 @@
     "Please enter your password to cancel the account": "Proszę podać hasło aby anulować konto",
     "Please enter your password to confirm you would like to log out of your other browser sessions across all of your devices.": "Wprowadź hasło, aby potwierdzić, że chcesz wylogować się z innych sesji przeglądarki na wszystkich swoich urządzeniach.",
     "Please indicate the contacts": "Proszę podać kontakty",
-    "Please join Monica": "Proszę o dołączenie do Moniki",
+    "Please join Monica": "Proszę o dołączenie do Monica",
     "Please provide the email address of the person you would like to add to this team.": "Podaj adres e-mail osoby, którą chcesz dodać do tego zespołu.",
     "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "Przeczytaj naszą <link>dokumentację<\/link>, aby dowiedzieć się więcej o tej funkcji i zmiennych, do których masz dostęp.",
     "Please select a page on the left to load modules.": "Aby załadować moduły, wybierz stronę po lewej stronie.",
@@ -887,11 +887,10 @@
     "Templates": "Szablony",
     "Templates let you customize what data should be displayed on your contacts. You can define as many templates as you want, and choose which template should be used on which contact.": "Szablony pozwalają dostosować, jakie dane mają być wyświetlane w kontaktach. Możesz zdefiniować dowolną liczbę szablonów i wybrać, który szablon ma być użyty w którym kontakcie.",
     "Terms of Service": "Warunki Korzystania z Usługi",
-    "Test email for Monica": "Testowy e-mail dla Moniki",
+    "Test email for Monica": "Testowy e-mail dla Monica",
     "Test email sent!": "Testowy e-mail wysłany!",
     "Thanks,": "Dzięki,",
-    "Thanks for giving Monica a try": "Dziękuję za umożliwienie Monice wypróbowania",
-    "Thanks for giving Monica a try.": "Dziękuję za umożliwienie Monice wypróbowania.",
+    "Thanks for giving Monica a try.": "Dziękuję za umożliwienie Monica wypróbowania.",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Dziękujemy za zarejestrowanie się! Czy zanim zaczniesz, możesz zweryfikować swój adres e-mail, klikając link, który właśnie wysłaliśmy do Ciebie e-mailem? Jeśli nie otrzymałeś wiadomości e-mail, z przyjemnością wyślemy Ci kolejną.",
     "The :attribute must be at least :length characters.": "Pole :attribute musi mieć co najmniej :length znaków.",
     "The :attribute must be at least :length characters and contain at least one number.": "Pole :attribute musi mieć przynajmniej :length znaków i przynajmniej jedną cyfrę.",
@@ -961,7 +960,7 @@
     "The important dates in the next 12 months": "Ważne daty w ciągu najbliższych 12 miesięcy",
     "The job information has been saved": "Informacje o zadaniu zostały zapisane",
     "The journal lets you document your life with your own words.": "Dziennik pozwala dokumentować swoje życie własnymi słowami.",
-    "The keys to manage uploads have not been set in this Monica instance.": "W tej instancji Moniki nie ustawiono kluczy do zarządzania przesyłaniem.",
+    "The keys to manage uploads have not been set in this Monica instance.": "W tej instancji Monica nie ustawiono kluczy do zarządzania przesyłaniem.",
     "The label has been added": "Etykieta została dodana",
     "The label has been created": "Etykieta została utworzona",
     "The label has been deleted": "Etykieta została usunięta",
@@ -1073,7 +1072,7 @@
     "they\/them": "oni\/oni",
     "This address is not active anymore": "Adres ten nie jest już aktywny",
     "This device": "To urządzenie",
-    "This email is a test email to check if Monica can send an email to this email address.": "Ten e-mail jest wiadomością testową mającą na celu sprawdzenie, czy Monika może wysłać wiadomość na ten adres e-mail.",
+    "This email is a test email to check if Monica can send an email to this email address.": "Ten e-mail jest wiadomością testową mającą na celu sprawdzenie, czy Monica może wysłać wiadomość na ten adres e-mail.",
     "This is a secure area of the application. Please confirm your password before continuing.": "To jest bezpieczny obszar aplikacji. Proszę potwierdzić hasło, aby kontynuować.",
     "This is a test email": "To jest e-mail testowy",
     "This is a test notification for :name": "To jest powiadomienie testowe dla: :name",
@@ -1118,7 +1117,7 @@
     "Two factor authentication is now enabled. Scan the following QR code using your phone’s authenticator application or enter the setup key.": "Uwierzytelnianie dwuskładnikowe jest teraz włączone. Zeskanuj poniższy kod QR za pomocą aplikacji uwierzytelniającej w telefonie lub wprowadź klucz konfiguracyjny.",
     "Type": "Typ",
     "Type:": "Typ:",
-    "Type anything in the conversation with the Monica bot. It can be `start` for instance.": "Wpisz cokolwiek w rozmowie z botem Moniką. Może to być na przykład „start”.",
+    "Type anything in the conversation with the Monica bot. It can be `start` for instance.": "Wpisz cokolwiek w rozmowie z botem Monica. Może to być na przykład „start”.",
     "Types": "Typy",
     "Type something": "Napisz coś",
     "Unarchive contact": "Zarchiwizuj kontakt",
@@ -1192,7 +1191,7 @@
     "Wednesday": "Środa",
     "We hope you'll like it.": "Mamy nadzieję, że Ci się spodoba.",
     "We hope you will like what we’ve done.": "Mamy nadzieję, że spodoba Ci się to, co zrobiliśmy.",
-    "Welcome to Monica.": "Witamy w mieście Monika.",
+    "Welcome to Monica.": "Witamy w mieście Monica.",
     "Went to a bar": "Poszedłem do baru",
     "We support Markdown to format the text (bold, lists, headings, etc…).": "Obsługujemy Markdown w celu formatowania tekstu (pogrubienie, listy, nagłówki itp.).",
     "We were unable to find a registered user with this email address.": "Nie udało nam się znaleźć zarejestrowanego użytkownika z tym adresem e-mail.",
@@ -1225,15 +1224,15 @@
     "year": "rok",
     "Years": "Lata",
     "You are here:": "Jesteś tutaj:",
-    "You are invited to join Monica": "Zapraszam Cię do Moniki",
+    "You are invited to join Monica": "Zapraszam Cię do Monica",
     "You are receiving this email because we received a password reset request for your account.": "Otrzymujesz ten e-mail, ponieważ otrzymaliśmy prośbę o zresetowanie hasła dla Twojego konta.",
     "you can't even use your current username or password to sign in,": "nie możesz nawet użyć swojej obecnej nazwy użytkownika ani hasła, aby się zalogować,",
-    "you can't import any data from your current Monica account(yet),": "nie możesz (jeszcze) zaimportować żadnych danych z obecnego konta Moniki,",
+    "you can't import any data from your current Monica account(yet),": "nie możesz (jeszcze) zaimportować żadnych danych z obecnego konta Monica,",
     "You can add job information to your contacts and manage the companies here in this tab.": "W tej zakładce możesz dodawać informacje o ofertach pracy do swoich kontaktów i zarządzać firmami.",
     "You can add more account to log in to our service with one click.": "Możesz dodać kolejne konta, aby jednym kliknięciem zalogować się do naszego serwisu.",
     "You can be notified through different channels: emails, a Telegram message, on Facebook. You decide.": "Możesz otrzymywać powiadomienia różnymi kanałami: e-mailem, wiadomością Telegram, na Facebooku. Ty decydujesz.",
     "You can change that at any time.": "Możesz to zmienić w dowolnym momencie.",
-    "You can choose how you want Monica to display dates in the application.": "Możesz wybrać, w jaki sposób Monika ma wyświetlać daty w aplikacji.",
+    "You can choose how you want Monica to display dates in the application.": "Możesz wybrać, w jaki sposób Monica ma wyświetlać daty w aplikacji.",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "Możesz wybrać, które waluty mają być włączone na Twoim koncie, a które nie.",
     "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Możesz dostosować sposób wyświetlania kontaktów zgodnie z własnym gustem\/kulturą. Być może zamiast Bonda Jamesa chciałbyś użyć Jamesa Bonda. Tutaj możesz to dowolnie zdefiniować.",
     "You can customize the criteria that let you track your mood.": "Możesz dostosować kryteria, które pozwolą Ci śledzić swój nastrój.",
@@ -1252,7 +1251,7 @@
     "You may not delete your personal team.": "Nie możesz usunąć swojego osobistego zespołu.",
     "You may not leave a team that you created.": "Nie możesz opuścić zespołu, który stworzyłeś",
     "You might need to reload the page to see the changes.": "Aby zobaczyć zmiany, może być konieczne ponowne załadowanie strony.",
-    "You need at least one template for contacts to be displayed. Without a template, Monica won’t know which information it should display.": "Aby wyświetlić kontakty, potrzebujesz co najmniej jednego szablonu. Bez szablonu Monika nie będzie wiedziała, jakie informacje ma wyświetlić.",
+    "You need at least one template for contacts to be displayed. Without a template, Monica won’t know which information it should display.": "Aby wyświetlić kontakty, potrzebujesz co najmniej jednego szablonu. Bez szablonu Monica nie będzie wiedziała, jakie informacje ma wyświetlić.",
     "Your account current usage": "Bieżące wykorzystanie Twojego konta",
     "Your account has been created": "Twoje konto zostało utworzone",
     "Your account is linked": "Twoje konto jest połączone",
@@ -1267,7 +1266,7 @@
     "Your mood this year": "Twój nastrój w tym roku",
     "Your name here will be used to add yourself as a contact.": "Twoje imię i nazwisko zostanie użyte, aby dodać Cię jako kontakt.",
     "You wanted to be reminded of the following:": "Chciałeś przypomnieć sobie następujące kwestie:",
-    "You WILL still have to delete your account on Monica or OfficeLife.": "Nadal będziesz musiał usunąć swoje konto w Monice lub OfficeLife.",
+    "You WILL still have to delete your account on Monica or OfficeLife.": "Nadal będziesz musiał usunąć swoje konto w Monica lub OfficeLife.",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "Zostałeś zaproszony do korzystania z tego adresu e-mail w Monica, osobistym systemie CRM typu open source, abyśmy mogli go używać do wysyłania Ci powiadomień.",
     "ze\/hir": "ze\/hir",
     "⚠️ Danger zone": "⚠️ Strefa zagrożenia",
