--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -267,7 +267,7 @@
     "colleague": "colega",
     "Companies": "Empresas",
     "Company name": "Nome da empresa",
-    "Compared to Monica:": "Comparado com Mônica:",
+    "Compared to Monica:": "Comparado com Monica:",
     "Configure how we should notify you": "Configure como devemos notificá-lo",
     "Confirm": "Confirmar",
     "Confirm Password": "Confirmar senha",
@@ -364,7 +364,7 @@
     "Delete the photo": "Exclua a foto",
     "Delete the slice": "Exclua a fatia",
     "Delete the vault": "Excluir o cofre",
-    "Delete your account on https:\/\/customers.monicahq.com.": "Exclua sua conta em https:\/\/customers.monilahq.com.",
+    "Delete your account on https:\/\/customers.monicahq.com.": "Exclua sua conta em https:\/\/customers.monicahq.com.",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "Excluir o cofre significa excluir todos os dados dentro dele para sempre. Não há como voltar atrás. Por favor, tenha certeza.",
     "Description": "Descrição",
     "Detail of a goal": "Detalhe de um gol",
@@ -621,7 +621,7 @@
     "miles (mi)": "milhas (mi)",
     "Modules in this page": "Módulos nesta página",
     "Monday": "Segunda-feira",
-    "Monica. All rights reserved. 2017 — :date.": "Mônica. Todos os direitos reservados. 2017 — :date.",
+    "Monica. All rights reserved. 2017 — :date.": "Monica. Todos os direitos reservados. 2017 — :date.",
     "Monica is open source, made by hundreds of people from all around the world.": "Monica é open source, feita por centenas de pessoas de todo o mundo.",
     "Monica was made to help you document your life and your social interactions.": "Monica foi feita para ajudar você a documentar sua vida e suas interações sociais.",
     "Month": "Mês",
@@ -640,7 +640,7 @@
     "Nature of the call": "Natureza da chamada",
     "nephew\/niece": "sobrinho sobrinha",
     "New Password": "Nova Senha",
-    "New to Monica?": "Novo na Mônica?",
+    "New to Monica?": "Novo na Monica?",
     "Next": "Próximo",
     "Nickname": "Apelido",
     "nickname": "apelido",
@@ -727,7 +727,7 @@
     "Please enter your password to cancel the account": "Por favor digite sua senha para cancelar a conta",
     "Please enter your password to confirm you would like to log out of your other browser sessions across all of your devices.": "Introduza a sua senha para confirmar que deseja sair das suas outras sessões de navegação em todos os seus dispositivos.",
     "Please indicate the contacts": "Por favor indique os contactos",
-    "Please join Monica": "Junte-se à Mônica",
+    "Please join Monica": "Junte-se à Monica",
     "Please provide the email address of the person you would like to add to this team.": "Por favor, forneça o endereço de E-mail da pessoa que você gostaria de adicionar a este time.",
     "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "Leia nossa <link>documentação<\/link> para saber mais sobre esse recurso e a quais variáveis você tem acesso.",
     "Please select a page on the left to load modules.": "Selecione uma página à esquerda para carregar os módulos.",
@@ -887,11 +887,10 @@
     "Templates": "Modelos",
     "Templates let you customize what data should be displayed on your contacts. You can define as many templates as you want, and choose which template should be used on which contact.": "Os modelos permitem personalizar quais dados devem ser exibidos em seus contatos. Você pode definir quantos modelos desejar e escolher qual modelo deve ser usado em qual contato.",
     "Terms of Service": "Termos de Serviço",
-    "Test email for Monica": "E-mail de teste para Mônica",
+    "Test email for Monica": "E-mail de teste para Monica",
     "Test email sent!": "E-mail de teste enviado!",
     "Thanks,": "Obrigado,",
-    "Thanks for giving Monica a try": "Obrigado por dar uma chance à Mônica",
-    "Thanks for giving Monica a try.": "Obrigado por dar uma chance à Mônica.",
+    "Thanks for giving Monica a try.": "Obrigado por dar uma chance à Monica.",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Obrigado por inscrever-se! Antes de começar, você poderia verificar seu endereço de e-mail clicando no link que acabamos de enviar para você? Se você não recebeu o e-mail, teremos prazer em lhe enviar outro.",
     "The :attribute must be at least :length characters.": "O campo :attribute deve possuir no mínimo :length caracteres.",
     "The :attribute must be at least :length characters and contain at least one number.": "O campo :attribute deve possuir no mínimo :length caracteres e conter pelo menos um número.",
@@ -1192,7 +1191,7 @@
     "Wednesday": "Quarta-feira",
     "We hope you'll like it.": "Esperamos que você goste.",
     "We hope you will like what we’ve done.": "Esperamos que você goste do que fizemos.",
-    "Welcome to Monica.": "Bem vindo a Mônica.",
+    "Welcome to Monica.": "Bem vindo a Monica.",
     "Went to a bar": "Fui a um bar",
     "We support Markdown to format the text (bold, lists, headings, etc…).": "Apoiamos Markdown para formatar o texto (negrito, listas, títulos, etc…).",
     "We were unable to find a registered user with this email address.": "Não pudemos encontrar um usuário com esse endereço de e-mail.",
@@ -1225,7 +1224,7 @@
     "year": "ano",
     "Years": "Anos",
     "You are here:": "Você está aqui:",
-    "You are invited to join Monica": "Você está convidado a se juntar à Mônica",
+    "You are invited to join Monica": "Você está convidado a se juntar à Monica",
     "You are receiving this email because we received a password reset request for your account.": "Você recebeu esse e-mail porque foi solicitado uma redefinição de senha na sua conta.",
     "you can't even use your current username or password to sign in,": "você não pode nem usar seu nome de usuário ou senha atual para fazer login,",
     "you can't import any data from your current Monica account(yet),": "você não pode importar nenhum dado da sua conta atual da Monica (ainda),",
