--- a/lang/ru.json
+++ b/lang/ru.json
@@ -267,7 +267,7 @@
     "colleague": "коллега",
     "Companies": "Компании",
     "Company name": "Название компании",
-    "Compared to Monica:": "По сравнению с Моникой:",
+    "Compared to Monica:": "По сравнению с Monica:",
     "Configure how we should notify you": "Настройте способ уведомления вас",
     "Confirm": "Подтвердить",
     "Confirm Password": "Подтвердить пароль",
@@ -307,7 +307,7 @@
     "Create a reminder": "Создать напоминание",
     "Create a slice of life": "Создайте кусочек жизни",
     "Create at least one page to display contact’s data.": "Создайте хотя бы одну страницу для отображения данных контакта.",
-    "Create at least one template to use Monica.": "Создайте хотя бы один шаблон для использования Моники.",
+    "Create at least one template to use Monica.": "Создайте хотя бы один шаблон для использования Monica.",
     "Create a user": "Создать пользователя",
     "Create a vault": "Создать хранилище",
     "Created.": "Создано.",
@@ -621,9 +621,9 @@
     "miles (mi)": "мили (ми)",
     "Modules in this page": "Модули на этой странице",
     "Monday": "Понедельник",
-    "Monica. All rights reserved. 2017 — :date.": "Моника. Все права защищены. 2017 — :date.",
-    "Monica is open source, made by hundreds of people from all around the world.": "Моника имеет открытый исходный код, созданный сотнями людей со всего мира.",
-    "Monica was made to help you document your life and your social interactions.": "Моника была создана, чтобы помочь вам документировать свою жизнь и социальные взаимодействия.",
+    "Monica. All rights reserved. 2017 — :date.": "Monica. Все права защищены. 2017 — :date.",
+    "Monica is open source, made by hundreds of people from all around the world.": "Monica имеет открытый исходный код, созданный сотнями людей со всего мира.",
+    "Monica was made to help you document your life and your social interactions.": "Monica была создана, чтобы помочь вам документировать свою жизнь и социальные взаимодействия.",
     "Month": "Месяц",
     "month": "месяц",
     "Mood in the year": "Настроение в году",
@@ -640,7 +640,7 @@
     "Nature of the call": "Характер звонка",
     "nephew\/niece": "племянник племянница",
     "New Password": "Новый пароль",
-    "New to Monica?": "Впервые с Моникой?",
+    "New to Monica?": "Впервые с Monica?",
     "Next": "Следующий",
     "Nickname": "Псевдоним",
     "nickname": "прозвище",
@@ -715,7 +715,7 @@
     "Played soccer": "Играл в футбол",
     "Played tennis": "Играл в теннис",
     "Please choose a template for this new post": "Пожалуйста, выберите шаблон для этого нового сообщения",
-    "Please choose one template below to tell Monica how this contact should be displayed. Templates let you define which data should be displayed on the contact page.": "Пожалуйста, выберите один шаблон ниже, чтобы сообщить Монике, как должен отображаться этот контакт. Шаблоны позволяют вам определить, какие данные должны отображаться на странице контактов.",
+    "Please choose one template below to tell Monica how this contact should be displayed. Templates let you define which data should be displayed on the contact page.": "Пожалуйста, выберите один шаблон ниже, чтобы сообщить Monica, как должен отображаться этот контакт. Шаблоны позволяют вам определить, какие данные должны отображаться на странице контактов.",
     "Please click the button below to verify your email address.": "Пожалуйста, нажмите кнопку ниже, чтобы подтвердить свой адрес электронной почты.",
     "Please complete this form to finalize your account.": "Пожалуйста, заполните эту форму, чтобы завершить создание учетной записи.",
     "Please confirm access to your account by entering one of your emergency recovery codes.": "Подтвердите доступ к своей учётной записи, введя один из кодов аварийного восстановления.",
@@ -727,7 +727,7 @@
     "Please enter your password to cancel the account": "Пожалуйста, введите свой пароль, чтобы закрыть аккаунт",
     "Please enter your password to confirm you would like to log out of your other browser sessions across all of your devices.": "Введите пароль для подтверждения выхода из других сеансов на всех ваших устройствах.",
     "Please indicate the contacts": "Пожалуйста, укажите контакты",
-    "Please join Monica": "Пожалуйста, присоединяйтесь к Монике",
+    "Please join Monica": "Пожалуйста, присоединяйтесь к Monica",
     "Please provide the email address of the person you would like to add to this team.": "Укажите электронный адрес человека, которого Вы хотите добавить в эту команду.",
     "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "Пожалуйста, прочитайте нашу <link>документацию<\/link>, чтобы узнать больше об этой функции и о том, к каким переменным у вас есть доступ.",
     "Please select a page on the left to load modules.": "Пожалуйста, выберите страницу слева для загрузки модулей.",
@@ -887,11 +887,10 @@
     "Templates": "Шаблоны",
     "Templates let you customize what data should be displayed on your contacts. You can define as many templates as you want, and choose which template should be used on which contact.": "Шаблоны позволяют вам настроить, какие данные должны отображаться в ваших контактах. Вы можете определить столько шаблонов, сколько захотите, и выбрать, какой шаблон следует использовать для какого контакта.",
     "Terms of Service": "Условия обслуживания",
-    "Test email for Monica": "Тестовое письмо для Моники",
+    "Test email for Monica": "Тестовое письмо для Monica",
     "Test email sent!": "Тестовое письмо отправлено!",
     "Thanks,": "Спасибо,",
-    "Thanks for giving Monica a try": "Спасибо, что дали Монике шанс",
-    "Thanks for giving Monica a try.": "Спасибо, что дали Монике шанс.",
+    "Thanks for giving Monica a try.": "Спасибо, что дали Monica шанс.",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Спасибо за регистрацию! Прежде чем начать, не могли бы вы подтвердить свой адрес электронной почты, нажав на ссылку, которую мы только что отправили вам по электронной почте? Если вы не получили письмо, мы с радостью отправим вам другое.",
     "The :attribute must be at least :length characters.": "Значение поля :attribute должно быть не меньше :length символов.",
     "The :attribute must be at least :length characters and contain at least one number.": "Значение поля :attribute должно быть не меньше :length символов и содержать как минимум одну цифру.",
@@ -1073,7 +1072,7 @@
     "they\/them": "они их",
     "This address is not active anymore": "Этот адрес больше не активен",
     "This device": "Это устройство",
-    "This email is a test email to check if Monica can send an email to this email address.": "Это электронное письмо является тестовым письмом, чтобы проверить, может ли Моника отправлять электронное письмо на этот адрес электронной почты.",
+    "This email is a test email to check if Monica can send an email to this email address.": "Это электронное письмо является тестовым письмом, чтобы проверить, может ли Monica отправлять электронное письмо на этот адрес электронной почты.",
     "This is a secure area of the application. Please confirm your password before continuing.": "Это защищённая область приложения. Пожалуйста, подтвердите Ваш пароль, прежде чем продолжить.",
     "This is a test email": "Это тестовое письмо",
     "This is a test notification for :name": "Это тестовое уведомление для :name",
@@ -1118,7 +1117,7 @@
     "Two factor authentication is now enabled. Scan the following QR code using your phone’s authenticator application or enter the setup key.": "Двухфакторная аутентификация теперь включена. Отсканируйте следующий QR-код с помощью приложения аутентификации вашего телефона или введите ключ настройки.",
     "Type": "Тип",
     "Type:": "Тип:",
-    "Type anything in the conversation with the Monica bot. It can be `start` for instance.": "Введите что-нибудь в разговор с ботом Моники. Например, это может быть «старт».",
+    "Type anything in the conversation with the Monica bot. It can be `start` for instance.": "Введите что-нибудь в разговор с ботом Monica. Например, это может быть «старт».",
     "Types": "Типы",
     "Type something": "Введите что-либо",
     "Unarchive contact": "Разархивировать контакт",
@@ -1176,7 +1175,7 @@
     "View history": "Посмотреть историю",
     "View log": "Посмотреть журнал",
     "View on map": "Посмотреть на карте",
-    "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Подождите несколько секунд, пока Моника (приложение) вас узнает. Мы отправим вам поддельное уведомление, чтобы проверить, сработает ли оно.",
+    "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "Подождите несколько секунд, пока Monica (приложение) вас узнает. Мы отправим вам поддельное уведомление, чтобы проверить, сработает ли оно.",
     "Waiting for key…": "Жду ключ…",
     "Walked": "Ходил",
     "Wallpaper": "Обои",
@@ -1192,7 +1191,7 @@
     "Wednesday": "Среда",
     "We hope you'll like it.": "Мы надеемся, что вам это понравится.",
     "We hope you will like what we’ve done.": "Мы надеемся, что вам понравится то, что мы сделали.",
-    "Welcome to Monica.": "Добро пожаловать в Монику.",
+    "Welcome to Monica.": "Добро пожаловать в Monica.",
     "Went to a bar": "Пошел в бар",
     "We support Markdown to format the text (bold, lists, headings, etc…).": "Мы поддерживаем Markdown для форматирования текста (жирный, списки, заголовки и т. д.).",
     "We were unable to find a registered user with this email address.": "Нам не удалось найти зарегистрированного пользователя с этим адресом электронной почты.",
@@ -1208,7 +1207,7 @@
     "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "Если двухфакторная аутентификация включена, Вам будет предложено ввести случайный токен безопасности во время аутентификации. Вы можете получить этот токен в приложении Google Authenticator Вашего телефона.",
     "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "Если включена двухфакторная аутентификация, во время аутентификации вам будет предложено ввести безопасный случайный токен. Вы можете получить этот токен из приложения Authenticator вашего телефона.",
     "When was the loan made?": "Когда был выдан кредит?",
-    "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "Когда вы определяете связь между двумя контактами, например связь отца и сына, Моника создает две связи, по одной для каждого контакта:",
+    "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "Когда вы определяете связь между двумя контактами, например связь отца и сына, Monica создает две связи, по одной для каждого контакта:",
     "Which email address should we send the notification to?": "На какой адрес электронной почты нам следует отправить уведомление?",
     "Who called?": "Который назвал?",
     "Who makes the loan?": "Кто выдает кредит?",
@@ -1225,15 +1224,15 @@
     "year": "год",
     "Years": "Годы",
     "You are here:": "Вы здесь:",
-    "You are invited to join Monica": "Приглашаем вас присоединиться к Монике",
+    "You are invited to join Monica": "Приглашаем вас присоединиться к Monica",
     "You are receiving this email because we received a password reset request for your account.": "Вы получили это письмо, потому что мы получили запрос на сброс пароля для Вашей учётной записи.",
     "you can't even use your current username or password to sign in,": "вы даже не можете использовать свое текущее имя пользователя или пароль для входа в систему,",
-    "you can't import any data from your current Monica account(yet),": "вы не можете импортировать данные из своей текущей учетной записи Моники (пока),",
+    "you can't import any data from your current Monica account(yet),": "вы не можете импортировать данные из своей текущей учетной записи Monica (пока),",
     "You can add job information to your contacts and manage the companies here in this tab.": "Здесь, на этой вкладке, вы можете добавлять информацию о вакансиях в свои контакты и управлять компаниями.",
     "You can add more account to log in to our service with one click.": "Вы можете добавить дополнительную учетную запись для входа в наш сервис одним щелчком мыши.",
     "You can be notified through different channels: emails, a Telegram message, on Facebook. You decide.": "Вы можете получать уведомления по разным каналам: электронная почта, сообщение Telegram, Facebook. Вам решать.",
     "You can change that at any time.": "Вы можете изменить это в любое время.",
-    "You can choose how you want Monica to display dates in the application.": "Вы можете выбрать, как Моника будет отображать даты в приложении.",
+    "You can choose how you want Monica to display dates in the application.": "Вы можете выбрать, как Monica будет отображать даты в приложении.",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "Вы можете выбрать, какие валюты следует включить в вашем аккаунте, а какие нет.",
     "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Вы можете настроить отображение контактов в соответствии со своим вкусом\/культурой. Возможно, вы захотите использовать Джеймса Бонда вместо Бонда Джеймса. Здесь вы можете определить это по своему желанию.",
     "You can customize the criteria that let you track your mood.": "Вы можете настроить критерии, позволяющие отслеживать ваше настроение.",
@@ -1252,7 +1251,7 @@
     "You may not delete your personal team.": "Вы не можете удалить свою команду.",
     "You may not leave a team that you created.": "Вы не можете покидать созданную Вами команду.",
     "You might need to reload the page to see the changes.": "Возможно, вам придется перезагрузить страницу, чтобы увидеть изменения.",
-    "You need at least one template for contacts to be displayed. Without a template, Monica won’t know which information it should display.": "Для отображения контактов необходим хотя бы один шаблон. Без шаблона Моника не будет знать, какую информацию он должен отображать.",
+    "You need at least one template for contacts to be displayed. Without a template, Monica won’t know which information it should display.": "Для отображения контактов необходим хотя бы один шаблон. Без шаблона Monica не будет знать, какую информацию он должен отображать.",
     "Your account current usage": "Текущее использование вашего аккаунта",
     "Your account has been created": "Ваш аккаунт был создан",
     "Your account is linked": "Ваш аккаунт связан",
