--- a/lang/sv.json
+++ b/lang/sv.json
@@ -621,7 +621,7 @@
     "miles (mi)": "miles (mi)",
     "Modules in this page": "Moduler på denna sida",
     "Monday": "måndag",
-    "Monica. All rights reserved. 2017 — :date.": "Monica. Alla rättigheter förbehållna. 2017 – :date.",
+    "Monica. All rights reserved. 2017 — :date.": "Monica. Alla rättigheter förbehållna. 2017 — :date.",
     "Monica is open source, made by hundreds of people from all around the world.": "Monica är öppen källkod, tillverkad av hundratals människor från hela världen.",
     "Monica was made to help you document your life and your social interactions.": "Monica skapades för att hjälpa dig dokumentera ditt liv och dina sociala interaktioner.",
     "Month": "Månad",
@@ -890,7 +890,6 @@
     "Test email for Monica": "Testmail för Monica",
     "Test email sent!": "Testmail skickat!",
     "Thanks,": "Tack,",
-    "Thanks for giving Monica a try": "Tack för att du gav Monica ett försök",
     "Thanks for giving Monica a try.": "Tack för att du gav Monica ett försök.",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "Tack för att du registrerade dig! Innan du börjar, kan du verifiera din e-postadress genom att klicka på länken vi just skickade till dig via e-post? Om du inte har fått e-postmeddelandet skickar vi gärna ett till.",
     "The :attribute must be at least :length characters.": ":Attribute måste vara minst :length tecken.",
