--- a/lang/zh-CN.json
+++ b/lang/zh-CN.json
@@ -267,7 +267,7 @@
     "colleague": "同事",
     "Companies": "公司",
     "Company name": "公司名称",
-    "Compared to Monica:": "与莫妮卡相比：",
+    "Compared to Monica:": "与Monica相比：",
     "Configure how we should notify you": "配置我们如何通知您",
     "Confirm": "确认",
     "Confirm Password": "确认密码",
@@ -621,9 +621,9 @@
     "miles (mi)": "英里 (mi)",
     "Modules in this page": "此页面中的模块",
     "Monday": "周一",
-    "Monica. All rights reserved. 2017 — :date.": "莫妮卡。版权所有。 2017 年 — :date。",
+    "Monica. All rights reserved. 2017 — :date.": "Monica。版权所有。 2017 年 — :date。",
     "Monica is open source, made by hundreds of people from all around the world.": "Monica 是开源的，由来自世界各地的数百人制作。",
-    "Monica was made to help you document your life and your social interactions.": "莫妮卡旨在帮助您记录您的生活和社交互动。",
+    "Monica was made to help you document your life and your social interactions.": "Monica旨在帮助您记录您的生活和社交互动。",
     "Month": "月",
     "month": "月",
     "Mood in the year": "这一年的心情",
@@ -640,7 +640,7 @@
     "Nature of the call": "通话性质",
     "nephew\/niece": "侄子侄女",
     "New Password": "新的密码",
-    "New to Monica?": "莫妮卡刚认识吗？",
+    "New to Monica?": "Monica刚认识吗？",
     "Next": "下一个",
     "Nickname": "昵称",
     "nickname": "昵称",
@@ -727,7 +727,7 @@
     "Please enter your password to cancel the account": "请输入您的密码以取消帐户",
     "Please enter your password to confirm you would like to log out of your other browser sessions across all of your devices.": "请输入您的密码，以确认您要注销您其他设备上的浏览器会话。",
     "Please indicate the contacts": "请注明联系方式",
-    "Please join Monica": "请加入莫妮卡",
+    "Please join Monica": "请加入Monica",
     "Please provide the email address of the person you would like to add to this team.": "请提供您想加入这个团队的人的电子邮件地址。",
     "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "请阅读我们的<link>文档<\/link>以了解有关此功能以及您可以访问哪些变量的更多信息。",
     "Please select a page on the left to load modules.": "请选择左侧的页面来加载模块。",
@@ -887,11 +887,10 @@
     "Templates": "模板",
     "Templates let you customize what data should be displayed on your contacts. You can define as many templates as you want, and choose which template should be used on which contact.": "模板可让您自定义应在联系人上显示的数据。您可以根据需要定义任意数量的模板，并选择应在哪个联系人上使用哪个模板。",
     "Terms of Service": "服务条款",
-    "Test email for Monica": "莫妮卡的测试电子邮件",
+    "Test email for Monica": "Monica的测试电子邮件",
     "Test email sent!": "测试邮件已发送！",
     "Thanks,": "谢谢，",
-    "Thanks for giving Monica a try": "感谢您给莫妮卡一个尝试",
-    "Thanks for giving Monica a try.": "感谢您给莫妮卡一次尝试。",
+    "Thanks for giving Monica a try.": "感谢您给Monica一次尝试。",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "感谢您的注册！在开始之前，您可以通过单击我们刚刚通过电子邮件发送给您的链接来验证您的电子邮件地址吗？如果您没有收到电子邮件，我们很乐意向您发送另一封电子邮件。",
     "The :attribute must be at least :length characters.": ":Attribute 至少为 :length 个字符。",
     "The :attribute must be at least :length characters and contain at least one number.": ":Attribute 至少为 :length 个字符且至少包含一个数字。",
@@ -1176,7 +1175,7 @@
     "View history": "查看历史记录",
     "View log": "查看日志",
     "View on map": "在地图上查看",
-    "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "等待几秒钟，让莫妮卡（应用程序）认出您。我们会向您发送一条虚假通知，看看它是否有效。",
+    "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "等待几秒钟，让Monica（应用程序）认出您。我们会向您发送一条虚假通知，看看它是否有效。",
     "Waiting for key…": "等待钥匙...",
     "Walked": "步行",
     "Wallpaper": "墙纸",
@@ -1192,7 +1191,7 @@
     "Wednesday": "周三",
     "We hope you'll like it.": "我们希望您会喜欢它。",
     "We hope you will like what we’ve done.": "我们希望您会喜欢我们所做的事情。",
-    "Welcome to Monica.": "欢迎来到莫妮卡。",
+    "Welcome to Monica.": "欢迎来到Monica。",
     "Went to a bar": "去了一家酒吧",
     "We support Markdown to format the text (bold, lists, headings, etc…).": "我们支持 Markdown 来格式化文本（粗体、列表、标题等）。",
     "We were unable to find a registered user with this email address.": "我们无法找到这个电子邮件地址的注册用户。",
@@ -1225,7 +1224,7 @@
     "year": "年",
     "Years": "年",
     "You are here:": "你在这里：",
-    "You are invited to join Monica": "诚邀您加入莫妮卡",
+    "You are invited to join Monica": "诚邀您加入Monica",
     "You are receiving this email because we received a password reset request for your account.": "您收到此电子邮件是因为我们收到了您帐户的密码重设请求。",
     "you can't even use your current username or password to sign in,": "您甚至无法使用当前的用户名或密码登录，",
     "you can't import any data from your current Monica account(yet),": "您还无法从当前的 Monica 帐户导入任何数据，",
@@ -1252,7 +1251,7 @@
     "You may not delete your personal team.": "您不能删除您的个人团队。",
     "You may not leave a team that you created.": "您不能离开您创建的团队。",
     "You might need to reload the page to see the changes.": "您可能需要重新加载页面才能看到更改。",
-    "You need at least one template for contacts to be displayed. Without a template, Monica won’t know which information it should display.": "您至少需要一个模板来显示联系人。如果没有模板，莫妮卡将不知道应该显示哪些信息。",
+    "You need at least one template for contacts to be displayed. Without a template, Monica won’t know which information it should display.": "您至少需要一个模板来显示联系人。如果没有模板，Monica将不知道应该显示哪些信息。",
     "Your account current usage": "您的帐户当前使用情况",
     "Your account has been created": "您的帐号已经建立",
     "Your account is linked": "您的帐户已关联",
