--- a/lang/zh-TW.json
+++ b/lang/zh-TW.json
@@ -267,7 +267,7 @@
     "colleague": "同事",
     "Companies": "公司",
     "Company name": "公司名稱",
-    "Compared to Monica:": "與莫妮卡相比：",
+    "Compared to Monica:": "與Monica相比：",
     "Configure how we should notify you": "配置我們如何通知您",
     "Confirm": "確認",
     "Confirm Password": "確認密碼",
@@ -621,9 +621,9 @@
     "miles (mi)": "英哩 (mi)",
     "Modules in this page": "此頁面中的模組",
     "Monday": "週一",
-    "Monica. All rights reserved. 2017 — :date.": "莫妮卡。版權所有。 2017 年 — :date。",
+    "Monica. All rights reserved. 2017 — :date.": "Monica。版權所有。 2017 年 — :date。",
     "Monica is open source, made by hundreds of people from all around the world.": "Monica 是開源的，由來自世界各地的數百人製作。",
-    "Monica was made to help you document your life and your social interactions.": "莫妮卡旨在幫助您記錄您的生活和社交互動。",
+    "Monica was made to help you document your life and your social interactions.": "Monica旨在幫助您記錄您的生活和社交互動。",
     "Month": "月",
     "month": "月",
     "Mood in the year": "這一年的心情",
@@ -640,7 +640,7 @@
     "Nature of the call": "通話性質",
     "nephew\/niece": "姪子姪女",
     "New Password": "新的密碼",
-    "New to Monica?": "莫妮卡剛認識嗎？",
+    "New to Monica?": "Monica剛認識嗎？",
     "Next": "下一個",
     "Nickname": "暱稱",
     "nickname": "暱稱",
@@ -727,7 +727,7 @@
     "Please enter your password to cancel the account": "請輸入您的密碼以取消帳戶",
     "Please enter your password to confirm you would like to log out of your other browser sessions across all of your devices.": "請輸入您的密碼，以確認您要登出您所有裝置上的其它瀏覽器工作階段。",
     "Please indicate the contacts": "請註明聯絡方式",
-    "Please join Monica": "請加入莫妮卡",
+    "Please join Monica": "請加入Monica",
     "Please provide the email address of the person you would like to add to this team.": "請提供您想加入這個團隊的人的電子郵件地址。",
     "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "請閱讀我們的<link>文件<\/link>以了解有關此功能以及您可以存取哪些變數的更多資訊。",
     "Please select a page on the left to load modules.": "請選擇左側的頁面來載入模組。",
@@ -887,11 +887,10 @@
     "Templates": "範本",
     "Templates let you customize what data should be displayed on your contacts. You can define as many templates as you want, and choose which template should be used on which contact.": "範本可讓您自訂應在聯絡人上顯示的資料。您可以根據需要定義任意數量的模板，並選擇在哪個聯絡人上應使用哪個模板。",
     "Terms of Service": "服務條款",
-    "Test email for Monica": "莫妮卡的測驗電子郵件",
+    "Test email for Monica": "Monica的測驗電子郵件",
     "Test email sent!": "測試郵件已發送！",
     "Thanks,": "謝謝，",
-    "Thanks for giving Monica a try": "感謝您給莫妮卡一個嘗試",
-    "Thanks for giving Monica a try.": "感謝您給莫妮卡一次嘗試。",
+    "Thanks for giving Monica a try.": "感謝您給Monica一次嘗試。",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.": "感謝您的註冊！在開始之前，您可以透過點擊我們剛剛透過電子郵件發送給您的連結來驗證您的電子郵件地址嗎？如果您沒有收到電子郵件，我們很樂意向您發送另一封電子郵件。",
     "The :attribute must be at least :length characters.": ":Attribute 至少為 :length 個字元。",
     "The :attribute must be at least :length characters and contain at least one number.": ":Attribute 至少為 :length 個字元且至少包含一個數字。",
@@ -1176,7 +1175,7 @@
     "View history": "查看歷史記錄",
     "View log": "查看日誌",
     "View on map": "在地圖上查看",
-    "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "等待幾秒鐘，讓莫妮卡（應用程式）認出您。我們會向您發送一條虛假通知，看看它是否有效。",
+    "Wait a few seconds for Monica (the application) to recognize you. We’ll send you a fake notification to see if it works.": "等待幾秒鐘，讓Monica（應用程式）認出您。我們會向您發送一條虛假通知，看看它是否有效。",
     "Waiting for key…": "等待鑰匙...",
     "Walked": "行人徒步區",
     "Wallpaper": "壁紙",
@@ -1192,7 +1191,7 @@
     "Wednesday": "週三",
     "We hope you'll like it.": "我們希望您會喜歡它。",
     "We hope you will like what we’ve done.": "我們希望您會喜歡我們所做的事情。",
-    "Welcome to Monica.": "歡迎來到莫妮卡。",
+    "Welcome to Monica.": "歡迎來到Monica。",
     "Went to a bar": "去了一家酒吧",
     "We support Markdown to format the text (bold, lists, headings, etc…).": "我們支援 Markdown 來格式化文字（粗體、清單、標題等）。",
     "We were unable to find a registered user with this email address.": "我們無法找到這個電子郵件地址的註冊使用者。",
@@ -1225,7 +1224,7 @@
     "year": "年",
     "Years": "年",
     "You are here:": "你在這裡：",
-    "You are invited to join Monica": "誠摯邀請您加入莫妮卡",
+    "You are invited to join Monica": "誠摯邀請您加入Monica",
     "You are receiving this email because we received a password reset request for your account.": "您收到此電子郵件是因為我們收到了您帳號的密碼重置請求。",
     "you can't even use your current username or password to sign in,": "您甚至無法使用目前的使用者名稱或密碼登錄，",
     "you can't import any data from your current Monica account(yet),": "您也無法從目前的 Monica 帳戶匯入任何數據，",
@@ -1252,7 +1251,7 @@
     "You may not delete your personal team.": "您不能刪除您的個人團隊。",
     "You may not leave a team that you created.": "您不能離開你建立的團隊。",
     "You might need to reload the page to see the changes.": "您可能需要重新載入頁面才能看到變更。",
-    "You need at least one template for contacts to be displayed. Without a template, Monica won’t know which information it should display.": "您至少需要一個範本來顯示聯絡人。如果沒有模板，莫妮卡將不知道應該顯示哪些資訊。",
+    "You need at least one template for contacts to be displayed. Without a template, Monica won’t know which information it should display.": "您至少需要一個範本來顯示聯絡人。如果沒有模板，Monica將不知道應該顯示哪些資訊。",
     "Your account current usage": "您的帳戶目前使用情況",
     "Your account has been created": "您的帳號已經建立",
     "Your account is linked": "您的帳戶已關聯",
